1593803643 | 87 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_danish.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_danish.txt,  M content/vrmonitor/translations/vrmonitor_errors_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_schinese.txt,  M content/vrmonitor/translations/vrmonitor_errors_swedish.txt,  M content/vrmonitor/translations/vrmonitor_errors_tchinese.txt,  M content/vrmonitor/translations/vrmonitor_errors_vietnamese.txt,  M content/vrmonitor/translations/vrmonitor_schinese.txt,  M content/vrmonitor/translations/vrmonitor_swedish.txt,  M content/vrmonitor/translations/vrmonitor_tchinese.txt,  M content/vrmonitor/translations/vrmonitor_ukrainian.txt,  M content/vrmonitor/translations/vrmonitor_vietnamese.txt,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_bulgarian.json,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resourc
https://steamdb.info/patchnotes/5249254/

--- a/content/vrmonitor/translations/vrmonitor_dutch.txt
+++ b/content/vrmonitor/translations/vrmonitor_dutch.txt
@@ -874,7 +874,7 @@
 "FirmwareWizard_UpdateBasestation_Progress_UpperText"	"
 "
 "[english]FirmwareWizard_UpdateBasestation_Progress_UpperText"	""
-"FirmwareWizard_UpdateBasestation_Fail_UpperText"	"Deze apparaatupdate is mislukt."
+"FirmwareWizard_UpdateBasestation_Fail_UpperText"	"Apparaatupdate is mislukt."
 "[english]FirmwareWizard_UpdateBasestation_Fail_UpperText"	"This device update failed."
 "Settings_Developer_Text"	"Ontwikkelaarsinstellingen"
 "[english]Settings_Developer_Text"	"Developer Settings"
@@ -1126,7 +1126,7 @@
 "[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Wanneer SteamVR niet wordt gebruikt..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
-"Settings_Audio_HDMIGain"	"Gainvermindering inschakelen op VIVE HDMI-audio"
+"Settings_Audio_HDMIGain"	"Versterkingsvermindering voor Vive HDMI-audio inschakelen"
 "[english]Settings_Audio_HDMIGain"	"Enable Gain reduction on VIVE HDMI Audio"
 "Settings_Audio_LeaveAlone"	"(Apparaat ongewijzigd laten)"
 "[english]Settings_Audio_LeaveAlone"	"(Do not change device)"
@@ -1378,7 +1378,7 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	" Base Station Update Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Apparaatupdate is mislukt."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Als deze apparaatupdate herhaaldelijk mislukt: <ul><li>Sluit SteamVR af.<li>Haal de stroomstekker van het basisstation eruit en stop deze er weer in.<li>Start SteamVR en probeer het opnieuw.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Volg deze stappen als deze apparaatupdate herhaaldelijk mislukt:<ul><li>Sluit SteamVR af.<li>Haal de stroomstekker van het basisstation eruit en stop deze er weer in.<li>Start SteamVR en probeer het opnieuw.</ul>"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR, and try again.</ul>"
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Klik op 'opnieuw proberen' om het nogmaals te proberen."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
@@ -1410,11 +1410,11 @@
 "[english]DismissableWarning_Detected"	"Detected"
 "DismissableWarning_TimeFormat"	"h:mm:ss"
 "[english]DismissableWarning_TimeFormat"	"h:mm:ss AP"
-"Settings_Camera_Compatibility"	"<b>Camerasnelheid</b>"
+"Settings_Camera_Compatibility"	"<b>Camerafrequentie</b>"
 "[english]Settings_Camera_Compatibility"	"<b>Camera Rate</b>"
-"Settings_Camera_CompatibilityExplanation"	"<font color=#ffffff><b>Als je haperingen in het volgen ervaart, dan kun je een lagere camerasnelheid instellen, de camera deactiveren of een andere USB-poort proberen.</b></font>"
+"Settings_Camera_CompatibilityExplanation"	"<font color=#ffffff><b>Als je haperingen in het volgen ervaart, dan kun je een lagere camerafrequentie instellen, de camera deactiveren of een andere USB-poort proberen.</b></font>"
 "[english]Settings_Camera_CompatibilityExplanation"	"<font color=#ffffff><b>If you experience a loss of tracking you may want to set a lower Camera Rate, disable the camera, or try a different USB port.</b></font>"
-"Settings_Camera_EnableWarning"	"<font color=#ffffff><b>Het inschakelen van de camera kan op incompatibele USB-poorten mogelijk de stabiliteit van het volgen hinderen.<br><br>Als je haperingen in het volgen ervaart, dan kun je een lagere camerasnelheid instellen, de camera deactiveren of een andere USB-poort proberen.</b></font>"
+"Settings_Camera_EnableWarning"	"<font color=#ffffff><b>Het inschakelen van de camera kan op incompatibele USB-poorten mogelijk de stabiliteit van het volgen hinderen.<br><br>Als je haperingen in het volgen ervaart, dan kun je een lagere camerafrequentie instellen, de camera deactiveren of een andere USB-poort proberen.</b></font>"
 "[english]Settings_Camera_EnableWarning"	"<font color=#ffffff><b>Enabling the camera may interfere with tracking stability on incompatible USB ports.<br><br>If you experience a loss of tracking you may want to set a lower Camera Rate, disable the camera, or try a different USB port.</b></font>"
 "Settings_Camera_TrackingRequiredForTest"	"De headset lijkt niet actief te volgen.\n\nVoor de cameratest is het nodig dat de headset kan volgen voordat de videostream wordt gestart.\n\nPlaats de headset goed in het zicht van de basisstations en probeer het opnieuw."
 "[english]Settings_Camera_TrackingRequiredForTest"	"The headset does not appear to be actively tracking.\n\nThe camera test requires a properly tracking headset before the video stream is started.\n\nPlace the headset in clear view of your base stations and try again."
@@ -1580,7 +1580,7 @@
 "[english]Settings_Developer_General_Header"	"Developer"
 "Settings_DefaultScreenshotType_Text"	"Screenshottype"
 "[english]Settings_DefaultScreenshotType_Text"	"Screenshot Type"
-"Settings_DefaultScreenshotType_Info"	"Stel de standaard te nemen soort schermafdruk in. Wees je ervan bewust dat vele VR-applicaties mogelijk geen ondersteuning bieden voor het soort schermafdruk dat je selecteert en dat deze applicaties de schermafdruk zullen downgraden naar stereoscopisch."
+"Settings_DefaultScreenshotType_Info"	"Stel de standaard te nemen soort screenshot in. Mogelijk bieden sommige VR-toepassingen geen ondersteuning voor het soort screenshot dat je selecteert en deze toepassingen zullen de screenshot naar stereoscopisch downgraden."
 "[english]Settings_DefaultScreenshotType_Info"	"Select the default type of screenshot to take.  Note that many VR applications might not support the requested type and will downgrade to stereoscopic."
 "Settings_DefaultScreenshotType_Mono"	"Normaal"
 "[english]Settings_DefaultScreenshotType_Mono"	"Normal"
@@ -1944,7 +1944,7 @@
 "[english]BugReporter_DescriptionRequired"	"Please supply a description."
 "BugReporter_FailedToCreateZip"	"ZIP-bijlage maken mislukt."
 "[english]BugReporter_FailedToCreateZip"	"Failed to create ZIP attachment."
-"BugReporter_SteamLoginRequired"	"Je moet ingelogd zijn op je Steam-account om een bug te melden."
+"BugReporter_SteamLoginRequired"	"Je moet ingelogd zijn met je Steam-account om een bug te melden."
 "[english]BugReporter_SteamLoginRequired"	"You need to be logged in to your Steam account to Report a Bug."
 "BugReporter_SubmissionSuccess"	"Verzenden gelukt.\n\nJe zult zo een bevestigingsmail ontvangen."
 "[english]BugReporter_SubmissionSuccess"	"Submission Successful.\n\nYou should receive a confirmation email shortly."
@@ -1984,13 +1984,13 @@
 "[english]DismissableWarning_BluetoothLinkServiceError"	"Bluetooth service not found (0x0400)"
 "DismissableWarning_BasestationsSyncOnBeamChannelConflict"	"Kanaalconflict: Sync on Beam (0x400000)"
 "[english]DismissableWarning_BasestationsSyncOnBeamChannelConflict"	"Sync on Beam Channel Conflict (0x400000)"
-"Settings_PowerOffBaseStations_Explanation"	"Basisstations waarvan energiebeheer aanstaat, gaan in stand-bymodus na 60 seconden wanneer SteamVR buiten gebruik is en activeren weer wanneer SteamVR start. Deze instelling wordt niet aanbevolen voor gedeelde ruimtes met meerdere SteamVR-gebruikers."
+"Settings_PowerOffBaseStations_Explanation"	"Basisstations waarvan energiebeheer aan staat, gaan in stand-bymodus na 60 seconden wanneer SteamVR buiten gebruik is en activeren weer wanneer SteamVR start. Deze instelling wordt niet aanbevolen voor gedeelde ruimtes met meerdere SteamVR-gebruikers."
 "[english]Settings_PowerOffBaseStations_Explanation"	"Power managed Base Stations go into standby mode after 60 seconds when SteamVR is not in use and wake up when SteamVR starts. This setting is not recommended for shared tracking spaces with multiple SteamVR users."
 "Settings_BaseStationsWakeUpAll_Explanation"	"Wekt alle basisstations waarvan het energiebeheer op afstand wordt geregeld."
 "[english]Settings_BaseStationsWakeUpAll_Explanation"	"Wakes all base stations participating in remote power management."
 "Settings_Bluetooth_ServicesNotAvailable"	"Bluetooth is niet beschikbaar"
 "[english]Settings_Bluetooth_ServicesNotAvailable"	"Bluetooth not available"
-"Settings_Bluetooth_ScanForBaseStations"	"Zoeken naar basisstations"
+"Settings_Bluetooth_ScanForBaseStations"	"Basisstations zoeken"
 "[english]Settings_Bluetooth_ScanForBaseStations"	"Scan For Base Stations"
 "Settings_Bluetooth_ScanForBaseStations_Explanation"	"Er wordt gezocht naar basisstations die hun bluetooth-aanwezigheid uitzenden en die onderdeel van een vorige volgsessie zijn geweest."
 "[english]Settings_Bluetooth_ScanForBaseStations_Explanation"	"This scans for Base Stations broadcasting their Bluetooth presence that have been part of a previous tracking session."
@@ -2178,7 +2178,7 @@
 "[english]BS_PowerManagement_Title"	"Base Station Power Management"
 "BS_PowerManagement_Enable"	"Energiebeheer inschakelen *"
 "[english]BS_PowerManagement_Enable"	"Enable Power Management *"
-"BS_PowerManagement_Enable_Explanation"	"Basisstations waarvan energiebeheer aanstaat, gaan in stand-bymodus wanneer SteamVR buiten gebruik is en activeren weer wanneer SteamVR start.\n"
+"BS_PowerManagement_Enable_Explanation"	"Basisstations waarvan energiebeheer aan staat, gaan in stand-bymodus wanneer SteamVR buiten gebruik is en activeren weer wanneer SteamVR start.\n"
 "[english]BS_PowerManagement_Enable_Explanation"	"Power managed Base Stations go into standby mode when SteamVR is not in use, and wake up again when SteamVR starts.\n"
 "BS_PowerManagement_RefreshLink"	"Vernieuwen"
 "[english]BS_PowerManagement_RefreshLink"	"Refresh"
@@ -2328,7 +2328,7 @@
 "[english]Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Fix an interrupted or cancelled base station update that is preventing it from tracking normally."
 "FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"Voordat de update kan doorgaan, moet dit basisstation opnieuw optisch gedetecteerd worden door SteamVR te herstarten."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"This Base Station needs to be rediscovered optically by a restart of SteamVR before the update can proceed."
-"FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"Voordat het bijwerken kan plaatsvinden, dient dit basisstation herstart en opnieuw optisch gedetecteerd te worden door SteamVR te herstarten. Verwijder de stroomkabel uit het basisstation en sluit deze daarna opnieuw aan."
+"FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"Voordat de update hervat kan worden, dient dit basisstation herstart en opnieuw optisch gedetecteerd te worden, door SteamVR te herstarten. Verwijder de stroomkabel uit het basisstation en sluit deze daarna opnieuw aan."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
 "FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"Dit basisstation heeft een nieuwere versie van de update en heeft deze geweigerd. Sluit de stroomkabel van het basistation opnieuw aan."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"This Base Station has a newer version of the update and has rejected it. Please unplug and then replug the Base Station's power cable."
@@ -2430,7 +2430,7 @@
 "[english]MenuAction_DebugCommands"	"Debug Commands"
 "FirmwareWizard_ProgressPercentFinishing"	"[ Voltooien... ]"
 "[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"Volg deze stappen indien deze apparaatupdate blijft mislukken zonder voortgang te boeken:<ul><li>Sluit SteamVR af.<li>Sluit de stroomkabel van de Link Box opnieuw aan.<li>Sluit de stroomkabel van het basisstation opnieuw aan.<li>Start SteamVR en probeer het opnieuw.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"Volg deze stappen als deze apparaatupdate herhaaldelijk mislukt:<ul><li>Sluit SteamVR af.<li>Sluit de stroomkabel van de Link Box opnieuw aan.<li>Sluit de stroomkabel van het basisstation opnieuw aan.<li>Start SteamVR en probeer het opnieuw.</ul>"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR, and try again.</ul>"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Basisstation succesvol bijgewerkt. Het kan nodig zijn de stroomkabel van je basisstation opnieuw aan te sluiten, voordat het basisstation als bijgewerkt wordt gezien."
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
@@ -2566,9 +2566,9 @@
 "[english]Settings_PerApplication_Reprojection_Checkbox"	"Use legacy reprojection mode"
 "Settings_PerApplication_Reprojection_Description"	"Als je deze optie aanvinkt, wordt asynchrone herprojectie voor deze titel uitgeschakeld."
 "[english]Settings_PerApplication_Reprojection_Description"	"Checking this option will disable asynchronous reprojection for this title."
-"FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"Een onverwachte USB-verbinding met het basisstation voorkomt het draadloos bijwerken.<br><br><font color=#aaaa00>Ontkoppel de USB-kabel die is aangesloten op het basisstation.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"Een onverwachte USB-verbinding met het basisstation verhindert de draadloze update.<br><br><font color=#aaaa00>Ontkoppel de USB-kabel die op het basisstation is aangesloten.</font>"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
-"FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"Een onverwachte USB-verbinding met het basisstation voorkomt het draadloos bijwerken.<ul><li><font color=#aaaa00>Ontkoppel de stroomkabel van het basisstation.<li>Ontkoppel de USB-kabel die is aangesloten op het basisstation.<li>Sluit alleen de stroomkabel op het basisstation aan.<li>Wacht 30 seconden op het voltooien van de interne update van het basisstation.</font></ul><br>De LED van het basisstation kan mogelijk uit staan gedurende de interne update.<br>Wijzig geen enkele aansluiting op of verbinding met het basisstation gedurende de update."
+"FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"Een onverwachte USB-verbinding met het basisstation verhindert dat de draadloze update voltooid kan worden.<ul><li><font color=#aaaa00>Ontkoppel de stroomkabel van het basisstation.<li>Ontkoppel de USB-kabel die is aangesloten op het basisstation.<li>Sluit alleen de stroomkabel op het basisstation aan.<li>Wacht 30 seconden op het voltooien van de interne update van het basisstation.</font></ul><br>De led van het basisstation kan mogelijk uit staan gedurende de interne update.<br>Wijzig tijdens de update geen enkele aansluiting op het basisstation."
 "[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
 "Settings_Audio_Device_HMD"	"VR-headset"
 "[english]Settings_Audio_Device_HMD"	"VR Headset"
@@ -2588,7 +2588,7 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
 "BS_PromotePowerManagement_Title"	"SteamVR"
 "[english]BS_PromotePowerManagement_Title"	"SteamVR"
-"BS_PromotePowerManagement_Explanation"	"SteamVR kan nu het energiebeheer van je basisstations beheren.<br><br>Basisstations die energiebeheer hebben ingeschakeld gaan in slaapstand als SteamVR niet wordt gebruikt en starten weer op als SteamVR start.<br>"
+"BS_PromotePowerManagement_Explanation"	"SteamVR kan het energiebeheer van je basisstations beheren.<br><br>Basisstations waarvan energiebeheer aan staat, gaan in stand-bymodus wanneer SteamVR buiten gebruik is en activeren weer wanneer SteamVR start.<br>"
 "[english]BS_PromotePowerManagement_Explanation"	"SteamVR can power manage your Base Stations.<br><br>Power managed Base Stations go into standby mode when SteamVR is not in use and wake up again when SteamVR starts.<br>"
 "BS_PromotePowerManagement_Enable"	"Energiebeheer basisstation inschakelen *"
 "[english]BS_PromotePowerManagement_Enable"	"Enable Base Station Power Management *"
@@ -2608,11 +2608,21 @@
 "[english]MenuAction_BaseStationSettings"	"Base Station Settings"
 "Settings_Bluetooth_Title"	"Bluetooth-instellingen"
 "[english]Settings_Bluetooth_Title"	"Bluetooth Settings"
-"Settings_BaseStations_Title"	"Basisstation-instellingen"
+"Settings_BaseStations_Title"	"Basisstationinstellingen"
 "[english]Settings_BaseStations_Title"	"Base Station Settings"
 "Settings_Developer_Title"	"Ontwikkelaarsinstellingen"
 "[english]Settings_Developer_Title"	"Developer Settings"
 "MenuAction_PerformanceGraph"	"Prestatiegrafiek weergeven"
 "[english]MenuAction_PerformanceGraph"	"Display Performance Graph"
+"Advanced_NormalFrame"	"Normaal beeld"
+"[english]Advanced_NormalFrame"	"Normal Frame"
+"Advanced_MotionSmoothedFrame"	"Geherprojecteerd met motion smoothing"
+"[english]Advanced_MotionSmoothedFrame"	"Reprojected w/ Motion Smoothing"
+"Advanced_ReprojectedFrame"	"Geherprojecteerd zonder motion smoothing"
+"[english]Advanced_ReprojectedFrame"	"Reprojected w/o Motion Smoothing"
+"Advanced_DroppedFrame"	"Weergavefout"
+"[english]Advanced_DroppedFrame"	"Display Error"
+"Advanced_AppRequestedThrottling"	"App verzocht om throttling (cpu-gebonden)"
+"[english]Advanced_AppRequestedThrottling"	"App requested throttling (cpu bound)"
 }
 }
