--- a/content/vrmonitor/translations/vrmonitor_errors_tchinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_tchinese.txt
@@ -951,11 +951,11 @@
 "[english]VRInitError_Driver_HmdDriverIdOutOfBounds_FirstActionURL"	"vrmonitor://reboothmd"
 "VRInitError_IPC_ServerInitFailed_FirstActionURL"	"vrmonitor://reboothmd"
 "[english]VRInitError_IPC_ServerInitFailed_FirstActionURL"	"vrmonitor://reboothmd"
-"Warning_DismissableWarning_SteamVRInSafeMode_Header"	"安全模式"
+"Warning_DismissableWarning_SteamVRInSafeMode_Header"	"一些附加元件已封鎖"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Some Add-ons Blocked"
-"Warning_DismissableWarning_SteamVRInSafeMode_Description"	"由於最近發生當機，SteamVR 目前是以安全模式執行。在此模式下只會載入信任的驅動程式以避免相容性問題。"
+"Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>由於</span>最近發生當機，一些 SteamVR 附加元件已被封鎖。<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>深入了解</a>。"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Due</span> to a recent crash, some SteamVR add-ons have been blocked.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
-"Warning_DismissableWarning_SteamVRInSafeMode_Action"	"關閉安全模式"
+"Warning_DismissableWarning_SteamVRInSafeMode_Action"	"管理附加元件"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Manage Add-ons"
 "Warning_DismissableWarning_SteamVRInSafeMode_ActionURL"	"vrmonitor://safemode/disable"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_ActionURL"	"vrmonitor://safemode/disable"
@@ -965,7 +965,7 @@
 "[english]Warning_DismissableWarning_SteamVRUpdated_Header"	"SteamVR Update"
 "Warning_DismissableWarning_SteamVRUpdated_Description"	"SteamVR 已更新至第 %2 版。"
 "[english]Warning_DismissableWarning_SteamVRUpdated_Description"	"SteamVR has been updated to version %2."
-"Warning_DismissableWarning_SteamVRUpdated_Action"	"檢視已變更項目"
+"Warning_DismissableWarning_SteamVRUpdated_Action"	"查看更新內容"
 "[english]Warning_DismissableWarning_SteamVRUpdated_Action"	"See what changed"
 "Warning_DismissableWarning_SteamVRUpdated_ActionURL"	"%1"
 "[english]Warning_DismissableWarning_SteamVRUpdated_ActionURL"	"%1"
@@ -979,11 +979,11 @@
 "[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "Warning_DismissableWarning_HDCPError_Header"	"SteamVR 錯誤"
 "[english]Warning_DismissableWarning_HDCPError_Header"	"SteamVR Error"
-"Warning_DismissableWarning_HDCPError_Description"	"HDCP 錯誤 - 請檢視紀錄以了解更多詳細資訊。"
+"Warning_DismissableWarning_HDCPError_Description"	"<span>您的</span>顯示卡無法與頭戴顯示器順利連線，導致 HDCP 錯誤。請嘗試移除您正在使用的所有線纜介面卡或延長線。如顯示卡上另有連接埠可用，請嘗試該埠。<b>使用下方的重設連結來重設頭戴顯示器，以便顯示卡重新嘗試連線。</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>深入了解</a>。"
 "[english]Warning_DismissableWarning_HDCPError_Description"	"<span>Your</span> GPU is having trouble communicating with your HMD, resulting in an HDCP error. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b><p><a style ='color: rgb(212, 212, 212);' href=https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237'>Learn more</a>."
-"Warning_DismissableWarning_HDCPError_Action"	"更多資訊"
+"Warning_DismissableWarning_HDCPError_Action"	"重設頭戴顯示器"
 "[english]Warning_DismissableWarning_HDCPError_Action"	"Reset Headset"
-"Warning_DismissableWarning_HDCPError_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_HDCPError_ActionURL"	"vrmonitor://reboothmd"
 "[english]Warning_DismissableWarning_HDCPError_ActionURL"	"vrmonitor://reboothmd"
 "VRInitError_Init_InstallationNotFound_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=81&return_nodeid=71"
 "[english]VRInitError_Init_InstallationNotFound_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=81&return_nodeid=71"
@@ -1267,5 +1267,17 @@
 "[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"Device No Longer Supported"
 "Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>您的 %1 工程機不再受到支援。</font> <br><br>此裝置將不再收到韌體更新，並將逐漸失去功能。請於方便時及早替換。<br><br>（hwid: %2）"
 "[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Your pre-production %1 is no longer supported.</font> <br><br> This device will no longer receive firmware updates, and diminished functionality is expected. Please replace at your earliest convenience. <br><br>(hwid: %2)"
+"Warning_OpenXRDefaultRuntimePrompt_NotSet"	"OpenXR 執行階段目前尚未設定。"
+"[english]Warning_OpenXRDefaultRuntimePrompt_NotSet"	"The OpenXR runtime is not currently set."
+"Warning_OpenXRDefaultRuntimePrompt_AnotherSteamVR"	"OpenXR 執行階段目前設為其它版本的 SteamVR。"
+"[english]Warning_OpenXRDefaultRuntimePrompt_AnotherSteamVR"	"The OpenXR runtime is currently set to another version of SteamVR."
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Header"	"未將 SteamVR 設為預設的 OpenXR 執行階段。"
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Header"	"SteamVR isn't set as the default OpenXR runtime."
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Description"	"這可能會導致一些應用程式無法正確啟動。%1"
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Description"	"This might prevent some applications from launching correctly. %1"
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Action"	"設為預設"
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Action"	"Set as default"
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_ActionURL"	"vrmonitor://openxr/makedefault"
+"[english]Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_ActionURL"	"vrmonitor://openxr/makedefault"
 }
 }
