--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_bulgarian.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_bulgarian.json
@@ -1,5 +1,5 @@
 {
-	"language": "български",
+	"language": "bulgarian",
 	"pairing_start_failed_title": "Неуспешно сдвояване",
 	"pairing_start_failed_desc": "Сдвояването не успя да стартира.",
 	"pairing_initializing_title": "Инициализиране",
