--- a/resources/webinterface/dashboard/localization/bindingui_bulgarian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_bulgarian.json
@@ -1,5 +1,5 @@
 {
-  "language": "български",
+  "language": "bulgarian",
   "holographic_controller": "Контролер за Windows смесена реалност",
   "holographic_hmd": "Шлем за Windows смесена реалност",
   "SourceInputMode_UseAs": "Използване като %1$s",
