--- a/resources/webinterface/dashboard/localization/bindingui_danish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_danish.json
@@ -129,7 +129,7 @@
   "SourceInputMode_SmoothScroll_Deceleration_tooltip": "Hvor hurtigt rulningen falder i hastighed.",
   "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage_tooltip": "Hvor mange tidligere hastigheder der er nødvendige for at måle den gennemsnitlige hastighed.",
   "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage_tooltip": "Det maksimale antal tidligere hastigheder, som der skal tages højde for ved beregning af hastighed.",
-  "SourceInputMode_SmoothScroll_ThrownTerminationVelocity_tooltip": "Et svips højeste hastighed.",
+  "SourceInputMode_SmoothScroll_ThrownTerminationVelocity_tooltip": "Den højeste hastighed, som et svip kan have.",
   "SourceInputMode_SmoothScroll_EdgeScrollThreshold_tooltip": "Hvor tæt på kanten \"kantrulning\" bliver aktiveret.",
   "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias_tooltip": "Hvor meget hældning den lodrette kant har fra midten.",
   "SourceInputMode_SmoothScroll_EdgeScrollVelocity_tooltip": "Hvor hurtigt kanter ruller.",
@@ -139,10 +139,10 @@
   "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor_tooltip": "Den afstand, der rulles for hvert hak.",
   "SourceInputMode_DiscreteScroll_Trackpad_HapticOnTouchStart_tooltip": "Modtag en haptisk pulsering ved fingerkontakt.",
   "SourceInputMode_DiscreteScroll_Trackpad_DirectDirectionLock_tooltip": "Låser rulleretningen til generel bevægelse (stopper eksempelvis rul tilbage, når der svippes).",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch_tooltip": "Nødvendig afstand før første hak.",
-  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove_tooltip": "Nødvendig afstand for efterfølgende hak.",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnTouch_tooltip": "Nødvendig afstand før første rullehak.",
+  "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnMove_tooltip": "Nødvendig afstand for efterfølgende rullehak.",
   "SourceInputMode_DiscreteScroll_Trackpad_NoiseThreshold_OnReversal_tooltip": "Nødvendig afstand for at skifte rulleretning.",
-  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch_tooltip": "Første haks direkte manipuleringsfølsomhed.",
+  "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnTouch_tooltip": "Første rullehaks direkte manipuleringsfølsomhed.",
   "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove_tooltip": "Efterfølgende haks direkte manipuleringsfølsomhed.",
   "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnReversal_tooltip": "Direkte manipuleringsfølsomhed, når man skifter rulleretning.",
   "SourceInputMode_DiscreteScroll_Trackpad_FlickEnabled_tooltip": "Tænd/sluk for rullesvip.",
@@ -151,7 +151,7 @@
   "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed_tooltip": "Hastigheden, hvorved svip bliver langsommere.",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled_tooltip": "Aktiverer kontinuerlig rulning, når man ruller til kanter og holder nede.",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldScaleFactor_tooltip": "Styrken af hvert hak, som holdes nede.",
-  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate_tooltip": "Rullehastighed, når der holdes nede.",
+  "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldPulseRate_tooltip": "Hvor hurtigt et rul, som holdes nede, skal hakke.",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderTop_tooltip": "Området på trackpaden i toppen, som rulninger, der holdes nede, vil aktivere.",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldBorderBottom_tooltip": "Området på trackpaden i bunden, som rulninger, der holdes nede, vil aktivere.",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldHapticEnabled_tooltip": "Genererer haptisk pulsering for holdte hak.",
@@ -399,7 +399,7 @@
   "InputDebugger_FilterState_Title": "Filtertilstand for %1$s",
   "InputDebugger_Source": "Kilde:",
   "InputDebugger_Binding": "Binding:",
-  "InputDebugger_Active": "Aktivt:",
+  "InputDebugger_Active": "Aktive:",
   "InputDebugger_ActiveOrigin": "Oprindelse:",
   "InputDebugger_UpdateTime": "Sidst opdateret:",
   "InputDebugger_Value": "Værdi:",
