--- a/resources/webinterface/dashboard/localization/bindingui_korean.json
+++ b/resources/webinterface/dashboard/localization/bindingui_korean.json
@@ -207,7 +207,7 @@
   "SourceInputMode_StickyClick": "엄지스틱을 한쪽으로 기울인 상태에서 스틱을 계속 클릭",
   "SourceInputMode_StickyClick_Activate": "기울이기 활성화 임계 값",
   "SourceInputMode_StickyClick_Deactivate": "기울이기 비활성화 임계 값",
-  "SourceInputMode_TouchyClick": "Keep button clicked as long as it's touched",
+  "SourceInputMode_TouchyClick": "버튼을 접촉하는 동안 클릭을 유지하세요",
   "SourceInputMode_ButtonModeInputForce_Click": "다음에서 클릭 생성:",
   "SourceInputMode_Grab": "잡기",
   "SourceInputMode_CapsenseEnableThreshold": "CapSense 사용 임계 값:",
@@ -387,13 +387,13 @@
   "InputDebugger_WaitingForApp": "Waiting for update from application",
   "InputDebugger_ActiveActionSets": "Active Action Sets",
   "InputDebugger_NoActiveActionSets": "Application has no active action sets",
-  "InputDebugger_None": "None",
-  "InputDebugger_ActionSetName": "Action Set",
+  "InputDebugger_None": "없음",
+  "InputDebugger_ActionSetName": "액션 세트",
   "InputDebugger_SecondaryActionSetName": "Secondary Action Set",
   "InputDebugger_Device": "Restrict to Device",
-  "InputDebugger_Priority": "Priority",
-  "InputDebugger_ActionManifestFailed": "Unable to load action manifest",
-  "InputDebugger_ActionManifestLoading": "Loading action manifest",
+  "InputDebugger_Priority": "중요도",
+  "InputDebugger_ActionManifestFailed": "동작 매니페스트를 불러오지 못했습니다",
+  "InputDebugger_ActionManifestLoading": "동작 매니페스트를 불러오는 중입니다",
   "InputDebugger_NoActions": "Application has no actions",
   "InputDebugger_FilterDetails": "Filter details",
   "InputDebugger_FilterState_Title": "Filter state for %1$s",
