--- a/resources/webinterface/dashboard/localization/vrmonitor_brazilian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_brazilian.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Marcar esta opção permitirá especificar uma taxa de atualização diferente da configuração global para este aplicativo.",
 	"Settings_MimeTypes_Pancake_Header": "Seleciona em qual aplicativo iniciar aplicações 2D",
 	"Settings_Camera_EnableCamera": "Ativar câmera",
-	"Settings_Camera_AllowCameraInDashboard": "Exibir câmera no controle",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Ativa a janela de uma câmara anexada ao seu controle quando o menu principal estiver aberto.",
+	"Settings_Camera_ShowOnController": "Exibir câmera no controle",
+	"Settings_Camera_ShowOnController_Desc": "Ativa a janela de uma câmara anexada ao seu controle quando o menu principal estiver aberto.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Exibir câmera nos limites do cômodo",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Ativar visualização do cômodo",
+	"Settings_Camera_AllowCameraForRoomView": "Visualização do cômodo",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Clique duas vezes no botão \"System\" a qualquer momento para acessar a visualização de cômodo",
 	"Settings_Camera_Compatibility": "Taxa de câmara",
 	"Settings_Camera_Rate_Hz": "Taxa da câmara (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Caso enfrente perda de rastreamento, tente usar uma taxa diferente, desativar a câmera ou conectar a outra porta USB.",
+	"Settings_Camera_RoomViewStyle": "Estilo de visualização do cômodo",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Silhuetas coloridas",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Fantasmas coloridos",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Translúcido",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Opaco",
+	"Settings_Camera_RoomView3D_Experimental": "A visualização de cômodo 3D é experimental.",
+	"Settings_Camera_RoomView3D_Unsupported": "Headset não compatível com a visualização de cômodo 3D.",
+	"Settings_CameraTest": "Testar câmera e desempenho",
+	"Settings_StartCameraTest": "Iniciar teste",
+	"CameraTest_CheckingCamera": "Verificar câmera...",
+	"CameraTest_CheckingTracking": "Verificando rastreamento com a câmera...",
+	"CameraTest_CameraFailed": "A comunicação com a câmara falhou",
+	"CameraTest_TrackingFailed": "Falha no rastreamento com a câmera ativada",
+	"CameraTest_Success": "A câmera passou no teste",
+	"CameraTest": "Teste da câmara",
+	"CameraTestStatus_Evaluating": "Verificando",
+	"CameraTestStatus_Success": "Sucesso",
+	"CameraTestStatus_Failure": "Falha",
 	"Advanced_Appearance": "Aparência",
 	"Settings_Appearance_Background": "Imagem de fundo",
 	"Settings_Appearance_Background_NoSteam": "Iniciar Steam para ver quaisquer imagens de fundos adicionais.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Desativada",
 	"Settings_ToggleButton_Disable": "Desativar",
 	"Settings_ToggleButton_Enable": "Ativar",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "Configurações do SteamVR",
-	"Settings_CameraTest": "Testar câmera e desempenho",
-	"Settings_StartCameraTest": "Iniciar teste",
-	"CameraTest_CheckingCamera": "Verificar câmera...",
-	"CameraTest_CheckingTracking": "Verificando rastreamento com a câmera...",
-	"CameraTest_CameraFailed": "A comunicação com a câmara falhou",
-	"CameraTest_TrackingFailed": "Falha no rastreamento com a câmera ativada",
-	"CameraTest_Success": "A câmera passou no teste",
-	"CameraTest": "Teste da câmara",
-	"CameraTestStatus_Evaluating": "Verificando",
-	"CameraTestStatus_Success": "Sucesso",
-	"CameraTestStatus_Failure": "Falha",
-	"Settings_CameraChaperone_RoomViewMode": "Modo de câmera: visualização do cômodo",
-	"CameraRoomViewMode_EdgeA": "Silhuetas coloridas",
-	"CameraRoomViewMode_EdgeB": "Fantasmas coloridos",
-	"CameraRoomViewMode_VideoTranslucent": "Translúcido",
-	"CameraRoomViewMode_VideoOpaque": "Opaco",
 	"Settings_MustRestart_Description": "O SteamVR precisa ser reiniciado para que algumas alterações surtam efeito.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Reiniciar SteamVR",
 	"Settings_MustQuitApp_Description": "Por favor, saia do jogo atual para que as alterações surtam efeito.",
