--- a/resources/webinterface/dashboard/localization/vrmonitor_bulgarian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_bulgarian.json
@@ -1,5 +1,5 @@
 {
-	"language": "български",
+	"language": "bulgarian",
 	"VRMonitor_Nav_Overview": "Обзор",
 	"VRMonitor_Nav_Settings": "Настройки",
 	"VRMonitor_Nav_Help": "Помощ",
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Поставянето на отметка за тази опция ще позволи посочването на различна честота за опресняване от глобалната настройка за това приложение.",
 	"Settings_MimeTypes_Pancake_Header": "Избиране на приложение, в което да пускате двуизмерни такива",
 	"Settings_Camera_EnableCamera": "Включване на камера",
-	"Settings_Camera_AllowCameraInDashboard": "Показване на камера върху контролера",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Включва прозорец с камера, прикрепен към контролера, когато таблото е изведено.",
+	"Settings_Camera_ShowOnController": "Показване на камера върху контролера",
+	"Settings_Camera_ShowOnController_Desc": "Включва прозорец с камера, прикрепен към контролера, когато таблото е изведено.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Показване на камера при стайния ръб",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Включване на стаен изглед",
+	"Settings_Camera_AllowCameraForRoomView": "Стаен изглед",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Достъп до „Стайния изглед“ по всяко време чрез двойно кликване на системния бутон",
 	"Settings_Camera_Compatibility": "Честота на камерата",
 	"Settings_Camera_Rate_Hz": "Честота на камерата (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Ако изпитвате загуби при проследяването, ще е добре да зададете по-ниска честота на камерата, да я изключите или опитайте различен USB порт.",
+	"Settings_Camera_RoomViewStyle": "Стил за стаен изглед",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Цветни ръбове",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Цветни призраци",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Полупрозрачна обработка",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Непрозрачна обработка",
+	"Settings_Camera_RoomView3D_Experimental": "Триизмерният стаен изглед е експериментален.",
+	"Settings_Camera_RoomView3D_Unsupported": "Триизмерният стаен изглед не се поддържа на този ВР шлем.",
+	"Settings_CameraTest": "Тестване на честотата за камерата",
+	"Settings_StartCameraTest": "Стартиране на изпитанието",
+	"CameraTest_CheckingCamera": "Проверяване на камера...",
+	"CameraTest_CheckingTracking": "Проверяване на проследяването с камера…",
+	"CameraTest_CameraFailed": "Неуспешна комуникация с камерата",
+	"CameraTest_TrackingFailed": "Неуспешно проследяване с включена камера",
+	"CameraTest_Success": "Тестът на камерата е преминат",
+	"CameraTest": "Тест на камерата",
+	"CameraTestStatus_Evaluating": "Проверяване",
+	"CameraTestStatus_Success": "Успешно",
+	"CameraTestStatus_Failure": "Неуспешно",
 	"Advanced_Appearance": "Външен вид",
 	"Settings_Appearance_Background": "Фон",
 	"Settings_Appearance_Background_NoSteam": "Пуснете Steam, за да видите някакви допълнителни фонове.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Изкл.",
 	"Settings_ToggleButton_Disable": "Изключване",
 	"Settings_ToggleButton_Enable": "Включване",
+	"Settings_2D": "Двуизмерно",
+	"Settings_3D": "Триизмерно",
 	"Settings_Header_SteamVR": "SteamVR настройки",
-	"Settings_CameraTest": "Тестване на честотата за камерата",
-	"Settings_StartCameraTest": "Стартиране на изпитанието",
-	"CameraTest_CheckingCamera": "Проверяване на камера...",
-	"CameraTest_CheckingTracking": "Проверяване на проследяването с камера…",
-	"CameraTest_CameraFailed": "Неуспешна комуникация с камерата",
-	"CameraTest_TrackingFailed": "Неуспешно проследяване с включена камера",
-	"CameraTest_Success": "Тестът на камерата е преминат",
-	"CameraTest": "Тест на камерата",
-	"CameraTestStatus_Evaluating": "Проверяване",
-	"CameraTestStatus_Success": "Успешно",
-	"CameraTestStatus_Failure": "Неуспешно",
-	"Settings_CameraChaperone_RoomViewMode": "Стаен изглед за режим на камерата",
-	"CameraRoomViewMode_EdgeA": "Цветни ръбове",
-	"CameraRoomViewMode_EdgeB": "Цветни призраци",
-	"CameraRoomViewMode_VideoTranslucent": "Полупрозрачна обработка",
-	"CameraRoomViewMode_VideoOpaque": "Непрозрачна обработка",
 	"Settings_MustRestart_Description": "SteamVR трябва да бъде рестартирано, така че някои от промените да влязат в сила.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Рестартиране на SteamVR",
 	"Settings_MustQuitApp_Description": "Моля, излезте от текущата игра, така че промените да влязат в сила.",
