--- a/resources/webinterface/dashboard/localization/vrmonitor_czech.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_czech.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Zaškrtnutím této možnosti Vám bude umožněno nastavit pro tuto aplikaci obnovovací frekvenci, která se liší od globálního nastavení.",
 	"Settings_MimeTypes_Pancake_Header": "Aplikace pro spouštění 2D aplikací",
 	"Settings_Camera_EnableCamera": "Povolit kameru",
-	"Settings_Camera_AllowCameraInDashboard": "Zobrazovat kameru na ovladači",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Přidá na hlavní obrazovku okno s kamerou připevněné k ovladači.",
+	"Settings_Camera_ShowOnController": "Zobrazovat kameru na ovladači",
+	"Settings_Camera_ShowOnController_Desc": "Přidá na hlavní obrazovku okno s kamerou připevněné k ovladači.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Zobrazovat kameru na okraji místnosti",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Povolit pohled ven",
+	"Settings_Camera_AllowCameraForRoomView": "Pohled ven",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Umožní pohled ven kdykoli po dvojím stisknutí tlačítka „System“.",
 	"Settings_Camera_Compatibility": "Frekvence kamery",
 	"Settings_Camera_Rate_Hz": "Frekvence kamery (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Pokud se potýkáte s výpadky při sledování pohybu, zkuste nastavit nižší frekvenci kamery, zakázat kameru nebo zkusit jiný USB port.",
+	"Settings_Camera_RoomViewStyle": "Styl pohledu ven",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Barevné obrysy",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Barevné objekty",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Průhledné objekty",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Neprůhledné objekty",
+	"Settings_Camera_RoomView3D_Experimental": "3D pohled ven je experimentální funkce.",
+	"Settings_Camera_RoomView3D_Unsupported": "3D pohled ven není na tomto headsetu podporován.",
+	"Settings_CameraTest": "Test kamery a výkonu",
+	"Settings_StartCameraTest": "Zahájit test",
+	"CameraTest_CheckingCamera": "Kontrola kamery...",
+	"CameraTest_CheckingTracking": "Kontrola sledování s kamerou...",
+	"CameraTest_CameraFailed": "Chyba komunikace s kamerou",
+	"CameraTest_TrackingFailed": "Sledování s kamerou selhalo",
+	"CameraTest_Success": "Kamera funguje správně",
+	"CameraTest": "Test kamery",
+	"CameraTestStatus_Evaluating": "Probíhá kontrola",
+	"CameraTestStatus_Success": "Vše v pořádku",
+	"CameraTestStatus_Failure": "Chyba",
 	"Advanced_Appearance": "Vzhled",
 	"Settings_Appearance_Background": "Pozadí",
 	"Settings_Appearance_Background_NoSteam": "Dodatečná pozadí se načtou až po spuštění klienta služby Steam.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Ne",
 	"Settings_ToggleButton_Disable": "Zakázat",
 	"Settings_ToggleButton_Enable": "Povolit",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "Nastavení režimu SteamVR",
-	"Settings_CameraTest": "Test kamery a výkonu",
-	"Settings_StartCameraTest": "Zahájit test",
-	"CameraTest_CheckingCamera": "Kontrola kamery...",
-	"CameraTest_CheckingTracking": "Kontrola sledování s kamerou...",
-	"CameraTest_CameraFailed": "Chyba komunikace s kamerou",
-	"CameraTest_TrackingFailed": "Sledování s kamerou selhalo",
-	"CameraTest_Success": "Kamera funguje správně",
-	"CameraTest": "Test kamery",
-	"CameraTestStatus_Evaluating": "Probíhá kontrola",
-	"CameraTestStatus_Success": "Vše v pořádku",
-	"CameraTestStatus_Failure": "Chyba",
-	"Settings_CameraChaperone_RoomViewMode": "Režim pohledu ven",
-	"CameraRoomViewMode_EdgeA": "Barevné obrysy",
-	"CameraRoomViewMode_EdgeB": "Barevné objekty",
-	"CameraRoomViewMode_VideoTranslucent": "Průhledné objekty",
-	"CameraRoomViewMode_VideoOpaque": "Neprůhledné objekty",
 	"Settings_MustRestart_Description": "Aby se projevily změny, musíte restartovat režim SteamVR.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Restartovat režim SteamVR",
 	"Settings_MustQuitApp_Description": "Aby se projevily změny, ukončete aktuální hru.",
