--- a/resources/webinterface/dashboard/localization/vrmonitor_danish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_danish.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Hvis dette felt markeres, kan du angive en anden opdateringshastighed end applikationens globale indstilling.",
 	"Settings_MimeTypes_Pancake_Header": "Vælg en applikation, som 2D-applikationer skal startes i",
 	"Settings_Camera_EnableCamera": "Slå kamera til",
-	"Settings_Camera_AllowCameraInDashboard": "Vis kamera på controller",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Tænder et kameravindue, som er tilknyttet din controller, når instrumentbrættet vises.",
+	"Settings_Camera_ShowOnController": "Vis kamera på controller",
+	"Settings_Camera_ShowOnController_Desc": "Tænder et kameravindue, som er tilknyttet din controller, når instrumentbrættet vises.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Vis kamera ved rummets grænse",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Slå rumvisning til",
+	"Settings_Camera_AllowCameraForRoomView": "Rumvisning",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Få adgang til rumvisning når som helst ved at dobbeltklikke på systemknappen",
 	"Settings_Camera_Compatibility": "Kamerabilledfrekvens",
 	"Settings_Camera_Rate_Hz": "Kamerabilledfrekvens (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Hvis du oplever sporingstab, kan det hjælpe at sænke kamerabilledfrekvensen, slå kameraet fra eller prøve en anden USB-port.",
+	"Settings_Camera_RoomViewStyle": "Stil på rumvisning",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Farvede kanter",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Farvede skygger",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Gennemsigtig overgang",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Uigennemsigtig overgang",
+	"Settings_Camera_RoomView3D_Experimental": "3D-rumvisning er eksperimentel.",
+	"Settings_Camera_RoomView3D_Unsupported": "3D-rumvisning understøttes ikke af dette headset.",
+	"Settings_CameraTest": "Test kamera og ydeevne",
+	"Settings_StartCameraTest": "Start test",
+	"CameraTest_CheckingCamera": "Kontrollerer kamera...",
+	"CameraTest_CheckingTracking": "Kontrollerer sporing med kamera...",
+	"CameraTest_CameraFailed": "Kamerakommunikation mislykkedes",
+	"CameraTest_TrackingFailed": "Sporing mislykkedes med kameraet aktiveret",
+	"CameraTest_Success": "Bestod kameratest",
+	"CameraTest": "Kameratest",
+	"CameraTestStatus_Evaluating": "Kontrollerer",
+	"CameraTestStatus_Success": "Succes",
+	"CameraTestStatus_Failure": "Mislykkedes",
 	"Advanced_Appearance": "Udseende",
 	"Settings_Appearance_Background": "Baggrund",
 	"Settings_Appearance_Background_NoSteam": "Start Steam for at se flere baggrunde.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Fra",
 	"Settings_ToggleButton_Disable": "Slå fra",
 	"Settings_ToggleButton_Enable": "Slå til",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "SteamVR-indstillinger",
-	"Settings_CameraTest": "Test kamera og ydeevne",
-	"Settings_StartCameraTest": "Start test",
-	"CameraTest_CheckingCamera": "Kontrollerer kamera...",
-	"CameraTest_CheckingTracking": "Kontrollerer sporing med kamera...",
-	"CameraTest_CameraFailed": "Kamerakommunikation mislykkedes",
-	"CameraTest_TrackingFailed": "Sporing mislykkedes med kameraet aktiveret",
-	"CameraTest_Success": "Bestod kameratest",
-	"CameraTest": "Kameratest",
-	"CameraTestStatus_Evaluating": "Kontrollerer",
-	"CameraTestStatus_Success": "Succes",
-	"CameraTestStatus_Failure": "Mislykkedes",
-	"Settings_CameraChaperone_RoomViewMode": "Kameratilstand til rumvisning",
-	"CameraRoomViewMode_EdgeA": "Farvede kanter",
-	"CameraRoomViewMode_EdgeB": "Farvede skygger",
-	"CameraRoomViewMode_VideoTranslucent": "Gennemsigtig overgang",
-	"CameraRoomViewMode_VideoOpaque": "Uigennemsigtig overgang",
 	"Settings_MustRestart_Description": "SteamVR skal genstartes, før visse ændringer træder i kraft.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Genstart SteamVR",
 	"Settings_MustQuitApp_Description": "Det nuværende spil skal afsluttes, før ændringerne træder i kraft.",
