--- a/resources/webinterface/dashboard/localization/vrmonitor_dutch.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_dutch.json
@@ -179,8 +179,8 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Als je deze optie aanvinkt, kun je een andere vernieuwingsfrequentie invoeren voor deze toepassing.",
 	"Settings_MimeTypes_Pancake_Header": "Selecteer een toepassing om 2D-toepassingen in te starten",
 	"Settings_Camera_EnableCamera": "Camera",
-	"Settings_Camera_AllowCameraInDashboard": "Camera op controller tonen",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Schakelt een cameravenster aan je controller in wanneer het dashboard actief is.",
+	"Settings_Camera_ShowOnController": "Camera op controller tonen",
+	"Settings_Camera_ShowOnController_Desc": "Schakelt een cameravenster aan je controller in wanneer het dashboard actief is.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Camera tonen bij grens van kamer",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Kamerweergave",
@@ -188,6 +188,24 @@
 	"Settings_Camera_Compatibility": "Camerasnelheid",
 	"Settings_Camera_Rate_Hz": "Camerafrequentie (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Als je haperingen in het volgen ervaart, dan kun je een lagere camerasnelheid instellen, de camera deactiveren of een andere USB-poort proberen.",
+	"Settings_Camera_RoomViewStyle": "Stijl kamerweergave",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Gekleurde randen",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Gekleurde silhouetten",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Doorzichtige doorvoer",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Ondoorzichtige doorvoer",
+	"Settings_Camera_RoomView3D_Experimental": "3D-kamerweergave is experimenteel.",
+	"Settings_Camera_RoomView3D_Unsupported": "3D-kamerweergave wordt door deze headset niet ondersteund.",
+	"Settings_CameraTest": "Camera en prestaties testen",
+	"Settings_StartCameraTest": "Test starten",
+	"CameraTest_CheckingCamera": "Camera controleren...",
+	"CameraTest_CheckingTracking": "Volgen met camera controleren...",
+	"CameraTest_CameraFailed": "Cameracommunicatie mislukt",
+	"CameraTest_TrackingFailed": "Volgen met geactiveerde camera mislukt",
+	"CameraTest_Success": "Cameratest geslaagd",
+	"CameraTest": "Cameratest",
+	"CameraTestStatus_Evaluating": "Controleren",
+	"CameraTestStatus_Success": "Succesvol",
+	"CameraTestStatus_Failure": "Mislukt",
 	"Advanced_Appearance": "Uiterlijk",
 	"Settings_Appearance_Background": "Achtergrond",
 	"Settings_Appearance_Background_NoSteam": "Start Steam op om extra achtergronden te bekijken.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Uit",
 	"Settings_ToggleButton_Disable": "Uit",
 	"Settings_ToggleButton_Enable": "Aan",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "SteamVR-instellingen",
-	"Settings_CameraTest": "Camera en prestaties testen",
-	"Settings_StartCameraTest": "Test starten",
-	"CameraTest_CheckingCamera": "Camera controleren...",
-	"CameraTest_CheckingTracking": "Volgen met camera controleren...",
-	"CameraTest_CameraFailed": "Cameracommunicatie mislukt",
-	"CameraTest_TrackingFailed": "Volgen met geactiveerde camera mislukt",
-	"CameraTest_Success": "Cameratest geslaagd",
-	"CameraTest": "Cameratest",
-	"CameraTestStatus_Evaluating": "Controleren",
-	"CameraTestStatus_Success": "Succesvol",
-	"CameraTestStatus_Failure": "Mislukt",
-	"Settings_CameraChaperone_RoomViewMode": "Cameramodus voor kamerweergave",
-	"CameraRoomViewMode_EdgeA": "Gekleurde randen",
-	"CameraRoomViewMode_EdgeB": "Gekleurde silhouetten",
-	"CameraRoomViewMode_VideoTranslucent": "Doorzichtige doorvoer",
-	"CameraRoomViewMode_VideoOpaque": "Ondoorzichtige doorvoer",
 	"Settings_MustRestart_Description": "SteamVR moet herstart worden om sommige wijzigingen toe te passen.",
 	"Settings_MustRestart_RestartSteamVR_Button": "SteamVR herstarten",
 	"Settings_MustQuitApp_Description": "Sluit het huidige spel om de wijzigingen toe te passen.",
