--- a/resources/webinterface/dashboard/localization/vrmonitor_finnish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_finnish.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Tämän asetuksen valitseminen mahdollistaa eri päivitystiheyden määrittelyn sovellukselle yleisistä asetuksista.",
 	"Settings_MimeTypes_Pancake_Header": "Valitse sovellus, jotta voit käynnistää 2D-sovellukset",
 	"Settings_Camera_EnableCamera": "Ota kamera käyttöön",
-	"Settings_Camera_AllowCameraInDashboard": "Näytä kamera ohjaimessa",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Käynnistää ohjaimeesi liitetyn kameranäkymän, kun työpöytä on käytössä.",
+	"Settings_Camera_ShowOnController": "Näytä kamera ohjaimessa",
+	"Settings_Camera_ShowOnController_Desc": "Käynnistää ohjaimeesi liitetyn kameranäkymän, kun työpöytä on käytössä.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Näytä kamera huoneen reunalla",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Ota huonenäkymä käyttöön",
+	"Settings_Camera_AllowCameraForRoomView": "Huonenäkymä",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Pääset milloin tahansa huonenäkymään kaksoisklikkaamalla järjestelmäpainiketta.",
 	"Settings_Camera_Compatibility": "Kameran kuvataajuus",
 	"Settings_Camera_Rate_Hz": "Kameran päivitystiheys (hz)",
 	"Settings_Camera_CompatibilityExplanation": "Jos seuranta ei toimi, kannattaa joko säätää kameran nopeutta alemmaksi, poistaa kamera käytöstä tai kokeilla toista USB-porttia.",
+	"Settings_Camera_RoomViewStyle": "Huonenäkymän tyyli",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Värilliset rajat",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Värilliset siluetit",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Läpikuultava tila",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Läpikuultamaton tila",
+	"Settings_Camera_RoomView3D_Experimental": "3D-huonenäkymä on kokeellinen.",
+	"Settings_Camera_RoomView3D_Unsupported": "3D-huonenäkymä ei ole tuettu näillä VR-laseilla.",
+	"Settings_CameraTest": "Testaa kameraa ja suorituskykyä",
+	"Settings_StartCameraTest": "Aloita testi",
+	"CameraTest_CheckingCamera": "Tarkistetaan kameraa...",
+	"CameraTest_CheckingTracking": "Tarkistetaan jäljitystä kameralla...",
+	"CameraTest_CameraFailed": "Kamerakommunikaatio epäonnistui",
+	"CameraTest_TrackingFailed": "Jäljitys kameran ollessa päällä epäonnistui",
+	"CameraTest_Success": "Kameratesti läpäisty",
+	"CameraTest": "Kameratesti",
+	"CameraTestStatus_Evaluating": "Tarkistetaan",
+	"CameraTestStatus_Success": "Onnistui",
+	"CameraTestStatus_Failure": "Epäonnistui",
 	"Advanced_Appearance": "Ulkoasu",
 	"Settings_Appearance_Background": "Tausta",
 	"Settings_Appearance_Background_NoSteam": "Käynnistä Steam, jotta voit nähdä lisää taustavaihtoehtoja.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Pois päältä",
 	"Settings_ToggleButton_Disable": "Poista käytöstä",
 	"Settings_ToggleButton_Enable": "Ota käyttöön",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "SteamVR-asetukset",
-	"Settings_CameraTest": "Testaa kameraa ja suorituskykyä",
-	"Settings_StartCameraTest": "Aloita testi",
-	"CameraTest_CheckingCamera": "Tarkistetaan kameraa...",
-	"CameraTest_CheckingTracking": "Tarkistetaan jäljitystä kameralla...",
-	"CameraTest_CameraFailed": "Kamerakommunikaatio epäonnistui",
-	"CameraTest_TrackingFailed": "Jäljitys kameran ollessa päällä epäonnistui",
-	"CameraTest_Success": "Kameratesti läpäisty",
-	"CameraTest": "Kameratesti",
-	"CameraTestStatus_Evaluating": "Tarkistetaan",
-	"CameraTestStatus_Success": "Onnistui",
-	"CameraTestStatus_Failure": "Epäonnistui",
-	"Settings_CameraChaperone_RoomViewMode": "Kameran huonenäkymätila",
-	"CameraRoomViewMode_EdgeA": "Värilliset rajat",
-	"CameraRoomViewMode_EdgeB": "Värilliset siluetit",
-	"CameraRoomViewMode_VideoTranslucent": "Läpikuultava tila",
-	"CameraRoomViewMode_VideoOpaque": "Läpikuultamaton tila",
 	"Settings_MustRestart_Description": "SteamVR täytyy käynnistää uudelleen, jotta jotkut asetukset tulevat voimaan.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Käynnistä SteamVR uudelleen",
 	"Settings_MustQuitApp_Description": "Sulje peli, jotta muutokset tulevat voimaan.",
