--- a/resources/webinterface/dashboard/localization/vrmonitor_french.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_french.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Cochez cette option si vous voulez définir une nouvelle fréquence de rafraîchissement pour cette application depuis les paramètres généraux.",
 	"Settings_MimeTypes_Pancake_Header": "Sélectionnez l'application avec laquelle lancer les applications 2D",
 	"Settings_Camera_EnableCamera": "Activer la caméra",
-	"Settings_Camera_AllowCameraInDashboard": "Afficher la caméra sur le contrôleur",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Active une fenêtre caméra attachée à votre contrôleur quand le tableau de bord est affiché.",
+	"Settings_Camera_ShowOnController": "Afficher la caméra sur le contrôleur",
+	"Settings_Camera_ShowOnController_Desc": "Active une fenêtre caméra attachée à votre contrôleur quand le tableau de bord est affiché.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Afficher la caméra aux limites de la pièce",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Activer la vue de la pièce",
+	"Settings_Camera_AllowCameraForRoomView": "Vue de la pièce",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Accédez à la vue de la pièce à tout instant par un double clic du bouton System",
 	"Settings_Camera_Compatibility": "Fréq. de rafraîch.",
 	"Settings_Camera_Rate_Hz": "Fréquence de rafraîchissement de la caméra (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Si vous observez des pertes de précision du positionnement, veuillez essayer de régler une vitesse de rafraîchissement plus basse pour la caméra, de la désactiver complètement ou d’essayer un port USB différent.",
+	"Settings_Camera_RoomViewStyle": "Style de vue de la pièce",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Bords colorés",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Silhouettes colorées",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Vue translucide",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Vue opaque",
+	"Settings_Camera_RoomView3D_Experimental": "La vue de la pièce en 3D est une fonctionnalité expérimentale.",
+	"Settings_Camera_RoomView3D_Unsupported": "La vue de la pièce en 3D n'est pas prise en charge sur ce casque.",
+	"Settings_CameraTest": "Tester la caméra et les performances",
+	"Settings_StartCameraTest": "Commencer le test",
+	"CameraTest_CheckingCamera": "Vérification de la caméra...",
+	"CameraTest_CheckingTracking": "Vérification du suivi de la caméra...",
+	"CameraTest_CameraFailed": "Échec de communication avec la caméra",
+	"CameraTest_TrackingFailed": "Échec du suivi avec la caméra",
+	"CameraTest_Success": "Test de la caméra réussi",
+	"CameraTest": "Test caméra",
+	"CameraTestStatus_Evaluating": "Vérification",
+	"CameraTestStatus_Success": "Succès",
+	"CameraTestStatus_Failure": "Échec",
 	"Advanced_Appearance": "Apparence",
 	"Settings_Appearance_Background": "Arrière-plan",
 	"Settings_Appearance_Background_NoSteam": "Démarrer Steam pour voir d'autres arrière-plans.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Non",
 	"Settings_ToggleButton_Disable": "Désactiver",
 	"Settings_ToggleButton_Enable": "Activer",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "Paramètres SteamVR",
-	"Settings_CameraTest": "Tester la caméra et les performances",
-	"Settings_StartCameraTest": "Commencer le test",
-	"CameraTest_CheckingCamera": "Vérification de la caméra...",
-	"CameraTest_CheckingTracking": "Vérification du suivi de la caméra...",
-	"CameraTest_CameraFailed": "Échec de communication avec la caméra",
-	"CameraTest_TrackingFailed": "Échec du suivi avec la caméra",
-	"CameraTest_Success": "Test de la caméra réussi",
-	"CameraTest": "Test caméra",
-	"CameraTestStatus_Evaluating": "Vérification",
-	"CameraTestStatus_Success": "Succès",
-	"CameraTestStatus_Failure": "Échec",
-	"Settings_CameraChaperone_RoomViewMode": "Mode vue de la pièce",
-	"CameraRoomViewMode_EdgeA": "Bords colorés",
-	"CameraRoomViewMode_EdgeB": "Silhouettes colorées",
-	"CameraRoomViewMode_VideoTranslucent": "Vue translucide",
-	"CameraRoomViewMode_VideoOpaque": "Vue opaque",
 	"Settings_MustRestart_Description": "Vous devez redémarrer Steam pour que certains changements soient appliqués.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Redémarrer SteamVR",
 	"Settings_MustQuitApp_Description": "Veuillez quitter le jeu actuel pour appliquer les changements.",
