--- a/resources/webinterface/dashboard/localization/vrmonitor_german.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_german.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Bei Auswahl dieser Aktion kann eine benutzerdefinierte Aktualisierungsrate festgelegt werden.",
 	"Settings_MimeTypes_Pancake_Header": "Wählen Sie eine Anwendung zum Ausführen von 2D-Anwendungen",
 	"Settings_Camera_EnableCamera": "Kamera aktivieren",
-	"Settings_Camera_AllowCameraInDashboard": "Kamera auf Controller anzeigen",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Aktiviert ein mit dem Controller verbundenes Kamerafenster, wenn das Dashboard aktiviert ist.",
+	"Settings_Camera_ShowOnController": "Kamera auf Controller anzeigen",
+	"Settings_Camera_ShowOnController_Desc": "Aktiviert ein mit dem Controller verbundenes Kamerafenster, wenn das Dashboard aktiviert ist.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Kamera auf Raumbegrenzung anzeigen",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Raumansicht aktivieren",
+	"Settings_Camera_AllowCameraForRoomView": "Raumansicht",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Greifen Sie jederzeit auf die Raumansicht zu, indem Sie die Systemtaste doppelt drücken.",
 	"Settings_Camera_Compatibility": "Kamerafrequenz",
 	"Settings_Camera_Rate_Hz": "Kamerafrequenz (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Falls Fehler bei der Ortung auftreten, sollten Sie eine niedrigere Kamerafrequenz festlegen, die Kamera deaktivieren oder einen anderen USB-Anschluss ausprobieren.",
+	"Settings_Camera_RoomViewStyle": "Stil der Raumansicht",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Farbige Grenzen",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Farbige Geister",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Transparenter Übergang",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Undurchsichtiger Übergang",
+	"Settings_Camera_RoomView3D_Experimental": "Die 3D-Raumansicht ist experimentell.",
+	"Settings_Camera_RoomView3D_Unsupported": "Die 3D-Raumansicht wird von diesem VR-Headset nicht unterstützt.",
+	"Settings_CameraTest": "Kamera und Leistung testen",
+	"Settings_StartCameraTest": "Test starten",
+	"CameraTest_CheckingCamera": "Kamera wird überprüft…",
+	"CameraTest_CheckingTracking": "Ortung mit Kamera wird überprüft…",
+	"CameraTest_CameraFailed": "Kammerakommunikation fehlgeschlagen",
+	"CameraTest_TrackingFailed": "Ortung mit aktivierter Kamera fehlgeschlagen",
+	"CameraTest_Success": "Kameratest bestanden",
+	"CameraTest": "Kameratest",
+	"CameraTestStatus_Evaluating": "Wird überprüft…",
+	"CameraTestStatus_Success": "Erfolgreich",
+	"CameraTestStatus_Failure": "Fehlgeschlagen",
 	"Advanced_Appearance": "Darstellung",
 	"Settings_Appearance_Background": "Hintergrund",
 	"Settings_Appearance_Background_NoSteam": "Starten Sie Steam, um weitere Hintergründe zu finden.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Aus",
 	"Settings_ToggleButton_Disable": "Deaktivieren",
 	"Settings_ToggleButton_Enable": "Aktivieren",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "SteamVR-Einstellungen",
-	"Settings_CameraTest": "Kamera und Leistung testen",
-	"Settings_StartCameraTest": "Test starten",
-	"CameraTest_CheckingCamera": "Kamera wird überprüft…",
-	"CameraTest_CheckingTracking": "Ortung mit Kamera wird überprüft…",
-	"CameraTest_CameraFailed": "Kammerakommunikation fehlgeschlagen",
-	"CameraTest_TrackingFailed": "Ortung mit aktivierter Kamera fehlgeschlagen",
-	"CameraTest_Success": "Kameratest bestanden",
-	"CameraTest": "Kameratest",
-	"CameraTestStatus_Evaluating": "Wird überprüft…",
-	"CameraTestStatus_Success": "Erfolgreich",
-	"CameraTestStatus_Failure": "Fehlgeschlagen",
-	"Settings_CameraChaperone_RoomViewMode": "Kameramodus für Raumansicht",
-	"CameraRoomViewMode_EdgeA": "Farbige Grenzen",
-	"CameraRoomViewMode_EdgeB": "Farbige Geister",
-	"CameraRoomViewMode_VideoTranslucent": "Transparenter Übergang",
-	"CameraRoomViewMode_VideoOpaque": "Undurchsichtiger Übergang",
 	"Settings_MustRestart_Description": "SteamVR muss neu gestartet werden, um die Änderungen zu übernehmen.",
 	"Settings_MustRestart_RestartSteamVR_Button": "SteamVR neu starten",
 	"Settings_MustQuitApp_Description": "Bitte beenden Sie das aktuelle Spiel, um die Änderungen zu übernehmen.",
