--- a/resources/webinterface/dashboard/localization/vrmonitor_greek.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_greek.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Αυτή η επιλογή θα επιτρέπει να ορίζεται για αυτήν την εφαρμογή ένας διαφορετικός ρυθμός ανανέωσης από την παγκόσμια ρύθμιση.",
 	"Settings_MimeTypes_Pancake_Header": "Επιλέξτε μια εφαρμογή για τρέχετε εφαρμογές 2D",
 	"Settings_Camera_EnableCamera": "Ενεργοποίηση κάμερας",
-	"Settings_Camera_AllowCameraInDashboard": "Εμφάνιση κάμερας σε χειριστήριο",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Ενεργοποιεί ένα παράθυρο κάμερας συνδεδεμένο με το χειριστήριό σας όταν είναι ενεργός ο πίνακας.",
+	"Settings_Camera_ShowOnController": "Εμφάνιση κάμερας σε χειριστήριο",
+	"Settings_Camera_ShowOnController_Desc": "Ενεργοποιεί ένα παράθυρο κάμερας συνδεδεμένο με το χειριστήριό σας όταν είναι ενεργός ο πίνακας.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Εμφάνιση κάμερας σε άκρη δωματίου",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Ενεργοποίηση προβολής δωματίου",
+	"Settings_Camera_AllowCameraForRoomView": "Προβολή δωματίου",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Εμφανίστε την προβολή δωματίου οποιαδήποτε στιγμή πατώντας δύο φορές το κουμπί System",
 	"Settings_Camera_Compatibility": "Ρυθμός κάμερας",
 	"Settings_Camera_Rate_Hz": "Ρυθμός κάμερας (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Εάν παρατηρείτε διακοπές στον εντοπισμό ίσως πρέπει να θέσετε μικρότερο ρυθμό κάμερας, να απενεργοποιήσετε την κάμερα ή να δοκιμάσετε μια διαφορετική θύρα USB.",
+	"Settings_Camera_RoomViewStyle": "Στιλ προβολής δωματίου",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Χρωματισμένες άκρες",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Χρωματισμένα φαντάσματα",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Διαφανές διαχωριστικό",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Αδιαφανές διαχωριστικό",
+	"Settings_Camera_RoomView3D_Experimental": "Η 3D προβολή δωματίου είναι πειραματική.",
+	"Settings_Camera_RoomView3D_Unsupported": "Η 3D προβολή δωματίου δεν υποστηρίζεται σε αυτό το headset.",
+	"Settings_CameraTest": "Δοκιμή κάμερας και επιδόσεων",
+	"Settings_StartCameraTest": "Έναρξη δοκιμής",
+	"CameraTest_CheckingCamera": "Έλεγχος κάμερας...",
+	"CameraTest_CheckingTracking": "Έλεγχος ανίχνευσης με κάμερα...",
+	"CameraTest_CameraFailed": "Αποτυχία επικοινωνίας με κάμερα",
+	"CameraTest_TrackingFailed": "Η ανίχνευση απέτυχε με ενεργοποιημένη κάμερα",
+	"CameraTest_Success": "Επιτυχής δοκιμή κάμερας",
+	"CameraTest": "Τεστ κάμερας",
+	"CameraTestStatus_Evaluating": "Γίνεται έλεγχος",
+	"CameraTestStatus_Success": "Επιτυχία",
+	"CameraTestStatus_Failure": "Αποτυχία",
 	"Advanced_Appearance": "Εμφάνιση",
 	"Settings_Appearance_Background": "Φόντο",
 	"Settings_Appearance_Background_NoSteam": "Εκκίνηση Steam για προβολή οποιουδήποτε επιπλέον φόντου.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Ανενεργό",
 	"Settings_ToggleButton_Disable": "Απενεργοποίηση",
 	"Settings_ToggleButton_Enable": "Ενεργοποίηση",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "Ρυθμίσεις SteamVR",
-	"Settings_CameraTest": "Δοκιμή κάμερας και επιδόσεων",
-	"Settings_StartCameraTest": "Έναρξη δοκιμής",
-	"CameraTest_CheckingCamera": "Έλεγχος κάμερας...",
-	"CameraTest_CheckingTracking": "Έλεγχος ανίχνευσης με κάμερα...",
-	"CameraTest_CameraFailed": "Αποτυχία επικοινωνίας με κάμερα",
-	"CameraTest_TrackingFailed": "Η ανίχνευση απέτυχε με ενεργοποιημένη κάμερα",
-	"CameraTest_Success": "Επιτυχής δοκιμή κάμερας",
-	"CameraTest": "Τεστ κάμερας",
-	"CameraTestStatus_Evaluating": "Γίνεται έλεγχος",
-	"CameraTestStatus_Success": "Επιτυχία",
-	"CameraTestStatus_Failure": "Αποτυχία",
-	"Settings_CameraChaperone_RoomViewMode": "Λειτουργία κάμερας προβολής δωματίου",
-	"CameraRoomViewMode_EdgeA": "Χρωματισμένες άκρες",
-	"CameraRoomViewMode_EdgeB": "Χρωματισμένα φαντάσματα",
-	"CameraRoomViewMode_VideoTranslucent": "Διαφανές διαχωριστικό",
-	"CameraRoomViewMode_VideoOpaque": "Αδιαφανές διαχωριστικό",
 	"Settings_MustRestart_Description": "Το SteamVR πρέπει να επανεκκινήσει για να λάβουν χώρα μερικές αλλαγές.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Επανεκκίνηση SteamVR",
 	"Settings_MustQuitApp_Description": "Τερματίστε το τρέχον παιχνίδι για να λάβουν χώρα οι αλλαγές.",
