--- a/resources/webinterface/dashboard/localization/vrmonitor_hungarian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_hungarian.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "E lehetőség bejelölése lehetővé teszi a globálistól eltérő frissítési frekvencia megadását ehhez az alkalmazáshoz.",
 	"Settings_MimeTypes_Pancake_Header": "Válassz alkalmazást a 2D-s alkalmazások futtatásához",
 	"Settings_Camera_EnableCamera": "Kamera bekapcsolása",
-	"Settings_Camera_AllowCameraInDashboard": "Kamera mutatása a játékvezérlőn",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Bekapcsol egy kameraablakot a játékvezérlődhöz kapcsolva, amikor felhozod a Műszerfalat.",
+	"Settings_Camera_ShowOnController": "Kamera mutatása a játékvezérlőn",
+	"Settings_Camera_ShowOnController_Desc": "Bekapcsol egy, a játékvezérlődhöz kapcsolt kameraablakot, amikor a Műszerfal fel van hozva.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Kamera mutatása a szoba szélén",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Szobanézet bekapcsolása",
+	"Settings_Camera_AllowCameraForRoomView": "Szobanézet",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "A szobanézethez bármikor hozzáférhetsz a Rendszer gombot duplán megnyomva.",
 	"Settings_Camera_Compatibility": "Kamerafrissítés",
 	"Settings_Camera_Rate_Hz": "Kamerafrissítés (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Ha követésvesztést tapasztalsz, lehet, hogy csökkenteni kell a kamera frissítési sebességét, kikapcsolni a kamerát, vagy kipróbálni egy másik USB-portot.",
+	"Settings_Camera_RoomViewStyle": "Szobanézet stílusa",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Színes szélek",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Színes sziluettek",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Átlátszó áteresztés",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Nem átlátszó áteresztés",
+	"Settings_Camera_RoomView3D_Experimental": "A 3D szobanézet kísérleti jellegű.",
+	"Settings_Camera_RoomView3D_Unsupported": "A 3D szobanézet ezen a fejszetten nem támogatott.",
+	"Settings_CameraTest": "Kamera és teljesítmény tesztelése",
+	"Settings_StartCameraTest": "Teszt megkezdése",
+	"CameraTest_CheckingCamera": "Kamera ellenőrzése...",
+	"CameraTest_CheckingTracking": "Kamerával való követés ellenőrzése...",
+	"CameraTest_CameraFailed": "A kamerakommunikáció sikertelen",
+	"CameraTest_TrackingFailed": "Sikertelen követés bekapcsolt kamerával",
+	"CameraTest_Success": "Sikeres kamerateszt",
+	"CameraTest": "Kamerateszt",
+	"CameraTestStatus_Evaluating": "Ellenőrzés",
+	"CameraTestStatus_Success": "Sikeres",
+	"CameraTestStatus_Failure": "Sikertelen",
 	"Advanced_Appearance": "Megjelenés",
 	"Settings_Appearance_Background": "Háttér",
 	"Settings_Appearance_Background_NoSteam": "Bármilyen további háttér megnézéséhez indítsd el a Steamet.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Ki",
 	"Settings_ToggleButton_Disable": "Kikapcsolás",
 	"Settings_ToggleButton_Enable": "Bekapcsolás",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "SteamVR beállítások",
-	"Settings_CameraTest": "Kamera és teljesítmény tesztelése",
-	"Settings_StartCameraTest": "Teszt megkezdése",
-	"CameraTest_CheckingCamera": "Kamera ellenőrzése...",
-	"CameraTest_CheckingTracking": "Kamerával való követés ellenőrzése...",
-	"CameraTest_CameraFailed": "A kamerakommunikáció sikertelen",
-	"CameraTest_TrackingFailed": "Sikertelen követés bekapcsolt kamerával",
-	"CameraTest_Success": "Sikeres kamerateszt",
-	"CameraTest": "Kamerateszt",
-	"CameraTestStatus_Evaluating": "Ellenőrzés",
-	"CameraTestStatus_Success": "Sikeres",
-	"CameraTestStatus_Failure": "Sikertelen",
-	"Settings_CameraChaperone_RoomViewMode": "Szobanézet kameramód",
-	"CameraRoomViewMode_EdgeA": "Színes szélek",
-	"CameraRoomViewMode_EdgeB": "Színes sziluettek",
-	"CameraRoomViewMode_VideoTranslucent": "Átlátszó áteresztés",
-	"CameraRoomViewMode_VideoOpaque": "Nem átlátszó áteresztés",
 	"Settings_MustRestart_Description": "Néhány változtatás érvénybe lépéséhez újra kell indítani a SteamVR-t.",
 	"Settings_MustRestart_RestartSteamVR_Button": "SteamVR újraindítása",
 	"Settings_MustQuitApp_Description": "A változások életbe lépéséhez kérjük, lépj ki a játékból.",
