--- a/resources/webinterface/dashboard/localization/vrmonitor_italian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_italian.json
@@ -78,12 +78,12 @@
 	"Advanced_SaveFrameDataNow": "Salva i dati dei fotogrammi",
 	"Explanation_DisableEnhancedPowerManagement": "Se osservi strane perdite di tracciamento o non riesci ad associare i controller wireless, disabilita il risparmio energetico avanzato di Windows per i dispositivi USB di SteamVR. ",
 	"Explanation_QuickCalibrate": "Reimposta velocemente la configurazione della stanza. Per le impostazioni In piedi e VR a intera stanza verranno centrati nuovi bordi nel visore sul pavimento al centro del tuo spazio.",
-	"Explanation_RebootVive": "Resetta il tuo visore: l'operazione potrebbe risolvere i problemi del visore legati all'USB.",
+	"Explanation_RebootVive": "Ripristina il tuo visore: l'operazione potrebbe risolvere i problemi del visore legati all'USB.",
 	"Explanation_RemoveAllSteamVRUSBDevices": "Per reinstallare i driver, rimuovi dal sistema tutti i dispositivi USB collegati a SteamVR.",
 	"Explanation_ResetDismissableWarnings": "Gli avvisi temporanei vengono reimpostati e verranno visualizzati nuovamente, se necessario.",
 	"MenuAction_DisableEnhancedPowerManagement": "Disabilita risparmio energetico",
 	"MenuAction_QuickCalibrate": "Calibrazione rapida",
-	"MenuAction_RebootVive": "Resetta visore",
+	"MenuAction_RebootVive": "Ripristina visore",
 	"MenuAction_RecordTrackingData": "Registra i dati di monitoraggio",
 	"MenuAction_RemoveAllSteamVRUSBDevices": "Rimuovi tutti i dispositivi USB SteamVR",
 	"MenuAction_ResetDismissableWarnings": "Ripristina avvisi",
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Attivare questa opzione consentirà di specificare una frequenza di aggiornamento diversa da quella predefinita per questa applicazione.",
 	"Settings_MimeTypes_Pancake_Header": "Seleziona un'applicazione per avviare le applicazioni 2D",
 	"Settings_Camera_EnableCamera": "Attiva la telecamera",
-	"Settings_Camera_AllowCameraInDashboard": "Mostra telecamera sul controller",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Attiva una finestra della telecamera associata al tuo controller quando la Dashboard è attiva.",
+	"Settings_Camera_ShowOnController": "Mostra telecamera sul controller",
+	"Settings_Camera_ShowOnController_Desc": "Attiva una finestra della telecamera associata al tuo controller quando la Dashboard è attiva.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Mostra telecamera al bordo della stanza",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Abilita Vista stanza",
+	"Settings_Camera_AllowCameraForRoomView": "Vista stanza",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Accedi a Vista stanza in qualunque momento premendo due volte il pulsante Sistema",
 	"Settings_Camera_Compatibility": "Frequenza della telecamera",
 	"Settings_Camera_Rate_Hz": "Frequenza della telecamera (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Se osservi una perdita di monitoraggio imposta una frequenza della telecamera più bassa, disabilita la telecamera o prova con una porta USB diversa.",
+	"Settings_Camera_RoomViewStyle": "Stile vista stanza",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Bordi colorati",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Sagome colorate",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Visuale traslucida",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Visuale opaca",
+	"Settings_Camera_RoomView3D_Experimental": "La vista stanza in 3D è sperimentale.",
+	"Settings_Camera_RoomView3D_Unsupported": "La vista stanza in 3D non è supportata su questo visore.",
+	"Settings_CameraTest": "Prova telecamera e prestazioni",
+	"Settings_StartCameraTest": "Inizia test",
+	"CameraTest_CheckingCamera": "Verifica telecamera in corso...",
+	"CameraTest_CheckingTracking": "Verifica in corso del tracciamento con la telecamera...",
+	"CameraTest_CameraFailed": "Comunicazione con la telecamera non riuscita",
+	"CameraTest_TrackingFailed": "Tracciamento non riuscito con la telecamera abilitata",
+	"CameraTest_Success": "Test telecamera superato",
+	"CameraTest": "Prova telecamera",
+	"CameraTestStatus_Evaluating": "Verifica in corso",
+	"CameraTestStatus_Success": "Operazione riuscita",
+	"CameraTestStatus_Failure": "Operazione non riuscita",
 	"Advanced_Appearance": "Aspetto",
 	"Settings_Appearance_Background": "Sfondo",
 	"Settings_Appearance_Background_NoSteam": "Avvia Steam per visualizzare sfondi aggiuntivi.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Disattivato",
 	"Settings_ToggleButton_Disable": "Disabilita",
 	"Settings_ToggleButton_Enable": "Abilita",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "Impostazioni SteamVR",
-	"Settings_CameraTest": "Prova telecamera e prestazioni",
-	"Settings_StartCameraTest": "Inizia test",
-	"CameraTest_CheckingCamera": "Verifica telecamera in corso...",
-	"CameraTest_CheckingTracking": "Verifica in corso del tracciamento con la telecamera...",
-	"CameraTest_CameraFailed": "Comunicazione con la telecamera non riuscita",
-	"CameraTest_TrackingFailed": "Tracciamento non riuscito con la telecamera abilitata",
-	"CameraTest_Success": "Test telecamera superato",
-	"CameraTest": "Prova telecamera",
-	"CameraTestStatus_Evaluating": "Verifica in corso",
-	"CameraTestStatus_Success": "Operazione riuscita",
-	"CameraTestStatus_Failure": "Operazione non riuscita",
-	"Settings_CameraChaperone_RoomViewMode": "Modalità della telecamera Vista stanza",
-	"CameraRoomViewMode_EdgeA": "Bordi colorati",
-	"CameraRoomViewMode_EdgeB": "Sagome colorate",
-	"CameraRoomViewMode_VideoTranslucent": "Visuale traslucida",
-	"CameraRoomViewMode_VideoOpaque": "Visuale opaca",
 	"Settings_MustRestart_Description": "Riavvia SteamVR per applicare le modifiche.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Riavvia SteamVR",
 	"Settings_MustQuitApp_Description": "Esci dal gioco in esecuzione affinché le modifiche abbiano effetto.",
