--- a/resources/webinterface/dashboard/localization/vrmonitor_japanese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_japanese.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "このオプションにチェックを付けると、このアプリケーションのグローバル設定とは異なるリフレッシュレートを指定できます。",
 	"Settings_MimeTypes_Pancake_Header": "2Dアプリケーションを起動するアプリケーションを選択",
 	"Settings_Camera_EnableCamera": "カメラを有効化",
-	"Settings_Camera_AllowCameraInDashboard": "コントローラにカメラを表示",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "ダッシュボードが表示されている時に、コントローラにアタッチされたカメラウィンドウを開く。",
+	"Settings_Camera_ShowOnController": "Show Camera on Controller",
+	"Settings_Camera_ShowOnController_Desc": "Turns on a camera window attached to your controller when the Dashboard is up.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "ルーム境界にカメラを表示",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "ルームビューを有効化",
+	"Settings_Camera_AllowCameraForRoomView": "Room View",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "システムボタンのダブルクリックでいつでもルームビューにアクセス",
 	"Settings_Camera_Compatibility": "カメラレート",
 	"Settings_Camera_Rate_Hz": "カメラレート（Hz）",
 	"Settings_Camera_CompatibilityExplanation": "トラッキングが停止した場合は、カメラレートを下げる、カメラを無効にする、または他のUSBポートを試してください。",
+	"Settings_Camera_RoomViewStyle": "Room View Style",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Colored Edges",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Colored Ghosts",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Translucent Pass-Through",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Opaque Pass-Through",
+	"Settings_Camera_RoomView3D_Experimental": "3-D Room View is experimental.",
+	"Settings_Camera_RoomView3D_Unsupported": "3-D Room View is not supported on this headset.",
+	"Settings_CameraTest": "カメラとパフォーマンスをテストする",
+	"Settings_StartCameraTest": "テスト開始",
+	"CameraTest_CheckingCamera": "カメラをチェック中...",
+	"CameraTest_CheckingTracking": "カメラでトラッキングをチェック中...",
+	"CameraTest_CameraFailed": "カメラの通信失敗",
+	"CameraTest_TrackingFailed": "カメラ有効化状態でのトラッキング失敗",
+	"CameraTest_Success": "カメラテスト合格",
+	"CameraTest": "カメラテスト",
+	"CameraTestStatus_Evaluating": "確認中",
+	"CameraTestStatus_Success": "成功",
+	"CameraTestStatus_Failure": "失敗",
 	"Advanced_Appearance": "外観",
 	"Settings_Appearance_Background": "背景",
 	"Settings_Appearance_Background_NoSteam": "Steamを起動して、他の背景を確認します。",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "オフ",
 	"Settings_ToggleButton_Disable": "無効",
 	"Settings_ToggleButton_Enable": "有効",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "SteamVR設定",
-	"Settings_CameraTest": "カメラとパフォーマンスをテストする",
-	"Settings_StartCameraTest": "テスト開始",
-	"CameraTest_CheckingCamera": "カメラをチェック中...",
-	"CameraTest_CheckingTracking": "カメラでトラッキングをチェック中...",
-	"CameraTest_CameraFailed": "カメラの通信失敗",
-	"CameraTest_TrackingFailed": "カメラ有効化状態でのトラッキング失敗",
-	"CameraTest_Success": "カメラテスト合格",
-	"CameraTest": "カメラテスト",
-	"CameraTestStatus_Evaluating": "確認中",
-	"CameraTestStatus_Success": "成功",
-	"CameraTestStatus_Failure": "失敗",
-	"Settings_CameraChaperone_RoomViewMode": "ルームビューカメラモード",
-	"CameraRoomViewMode_EdgeA": "色付き境界線",
-	"CameraRoomViewMode_EdgeB": "色付きゴースト",
-	"CameraRoomViewMode_VideoTranslucent": "半透過パススルー",
-	"CameraRoomViewMode_VideoOpaque": "不透過パススルー",
 	"Settings_MustRestart_Description": "変更を反映するには、SteamVRを再起動する必要があります。",
 	"Settings_MustRestart_RestartSteamVR_Button": "SteamVRを再起動",
 	"Settings_MustQuitApp_Description": "変更を反映するには、現在のゲームを終了してください。",
