--- a/resources/webinterface/dashboard/localization/vrmonitor_korean.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_korean.json
@@ -99,7 +99,7 @@
 	"Settings_ShowDesktopViews": "데스크톱 탭 표시",
 	"Settings_CheckForSteam": "Steam 확인",
 	"Settings_DebugInputBindings": "입력 바인딩 사용자 인터페이스 디버깅 옵션 활성화",
-	"Advanced_GlobalActionSetPriority": "Enable global input from overlays (Experimental)",
+	"Advanced_GlobalActionSetPriority": "오버레이에서 전역 입력 사용 (시험 중)",
 	"Settings_FadeToGrid": "앱이 대기 중일 때 격자로 흐려짐",
 	"Settings_EnableDashboard": "시스템 버튼을 눌러 VR 대시보드 사용",
 	"Settings_EnableDashboardDesc": "시스템 버튼을 누르면 VR 대시보드를 불러옵니다.",
@@ -158,7 +158,7 @@
 	"Explanation_SupersamplingFiltering": "슈퍼샘플링 필터링 옵션:",
 	"Explanation_Supersampling_ResolutionPerEye": "한쪽 눈당 해상도",
 	"Settings_PerApplication_ChooseApplication": "애플리케이션 선택",
-	"Settings_PerApplication_AppResTitle": "Custom Resolution Multiplier",
+	"Settings_PerApplication_AppResTitle": "맞춤 해상도 배수",
 	"Settings_PerApplication_AppResHeader": "이 설정은 왼쪽의 %1$s 탭에 표시되는 현재 애플리케이션 전체 해상도 설정의 배수입니다. 설정을 적용하려면 애플리케이션을 다시 시작해야 합니다(기본값 100%).",
 	"Settings_PerApplication_OverlayVisibleHeader": "오버레이 애플리케이션은 SteamVR 대시보드의 탭으로 사용할 수 있습니다.",
 	"Settings_PerApplication_OverlayVisibleCheckbox": "SteamVR 실행 시 이 오버레이 애플리케이션을 시작합니다.",
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "이 옵션을 선택하면 이 애플리케이션의 전체 설정과 다른 새로고침 빈도를 설정할 수 있습니다.",
 	"Settings_MimeTypes_Pancake_Header": "2D 애플리케이션을 실행하는 데 사용할 애플리케이션 선택",
 	"Settings_Camera_EnableCamera": "카메라 활성화",
-	"Settings_Camera_AllowCameraInDashboard": "컨트롤러에 카메라 표시",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "대시보드가 표시되면 컨트롤러에 연결된 카메라 윈도우를 켭니다.",
+	"Settings_Camera_ShowOnController": "컨트롤러에 카메라 표시",
+	"Settings_Camera_ShowOnController_Desc": "대시보드가 표시되면 컨트롤러에 연결된 카메라 윈도우를 켭니다.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "방 가장자리에 카메라 표시",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "방 보기 허용",
+	"Settings_Camera_AllowCameraForRoomView": "방 보기",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "언제든지 시스템 버튼을 두 번 누르면 '방 보기'를 이용할 수 있습니다",
 	"Settings_Camera_Compatibility": "카메라 비율",
 	"Settings_Camera_Rate_Hz": "카메라 속도(Hz)",
 	"Settings_Camera_CompatibilityExplanation": "추적이 끊기는 현상이 생긴다면 카메라 비율을 낮추거나, 카메라를 끄거나, 다른 USB 포트를 사용해 보세요.",
+	"Settings_Camera_RoomViewStyle": "방 보기 방식",
+	"Settings_Camera_RoomViewStyle_EdgeA": "가장자리 색상 표시",
+	"Settings_Camera_RoomViewStyle_EdgeB": "고스팅 처리로 색상 표시",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "투명 통과",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "불투명 통과",
+	"Settings_Camera_RoomView3D_Experimental": "3-D 방 보기는 시험 중입니다.",
+	"Settings_Camera_RoomView3D_Unsupported": "3-D 방 보기는 이 헤드셋에서 지원되지 않습니다.",
+	"Settings_CameraTest": "카메라 및 성능 테스트",
+	"Settings_StartCameraTest": "테스트 시작",
+	"CameraTest_CheckingCamera": "카메라 확인 중...",
+	"CameraTest_CheckingTracking": "카메라를 활성화하여 추적 확인하기...",
+	"CameraTest_CameraFailed": "카메라 통신 실패",
+	"CameraTest_TrackingFailed": "카메라를 활성화한 추적이 실패했습니다",
+	"CameraTest_Success": "카메라 테스트 통과",
+	"CameraTest": "카메라 테스트",
+	"CameraTestStatus_Evaluating": "확인 중",
+	"CameraTestStatus_Success": "성공",
+	"CameraTestStatus_Failure": "실패",
 	"Advanced_Appearance": "표시",
 	"Settings_Appearance_Background": "배경",
 	"Settings_Appearance_Background_NoSteam": "Steam을 실행해 추가 배경이 있는지 확인하세요.",
@@ -215,7 +233,7 @@
 	"Settings_General_Confirm": "확인",
 	"Settings_General_Close": "닫기",
 	"Settings_General_CalibrateThumbstick": "엄지스틱 조정",
-	"Settings_General_CalibrateThumbstick_ConnectAController": "Connect a controller with a thumbstick.",
+	"Settings_General_CalibrateThumbstick_ConnectAController": "엄지스틱으로 컨트롤러를 연결하십시오.",
 	"Settings_General_NotEnoughSamples": "조정을 완료하려면 최소 %1$s회 이상 엄지스틱을 누르세요.",
 	"Settings_General_InviteMoreSamples": "계산된 각도가 %1$s도입니다. 계속 눌러 값을 조정하거나 확인을 눌러 이 보정값을 적용하세요.",
 	"Settings_General_LeftThumbstickAngle": "왼쪽 엄지스틱 각도: %1$s°",
@@ -228,7 +246,7 @@
 	"Settings_Near": "가까이",
 	"Settings_Middle": "가운데",
 	"Settings_Far": "멀리",
-	"Settings_DesktopScale": "Desktop Scale",
+	"Settings_DesktopScale": "데스크톱 스케일",
 	"Settings_DashboardScale": "대시보드 스케일",
 	"Settings_DesktopDarkMode": "데스크톱 다크 모드",
 	"Settings_ToggleDarkMode": "다크 모드로 전환",
@@ -246,16 +264,16 @@
 	"Settings_Chaperone_BoundsColor": "색상",
 	"Settings_Chaperone_BoundsTransparency": "투명",
 	"Settings_Chaperone_Color": "색상",
-	"Settings_Chaperone_ActivationDistance": "Activation Distance (m)",
+	"Settings_Chaperone_ActivationDistance": "활성 거리 (m)",
 	"Settings_Chaperone_WallHeight": "벽 높이 (m)",
 	"Settings_Chaperone_SuitableForSmall": "소규모 플레이 공간에 적합합니다. 주의하세요.",
 	"Settings_Chaperone_SuitableForMedium": "중간 규모 플레이 공간에 적합합니다.",
 	"Settings_Chaperone_SuitableForLarge": "대규모 플레이 공간에 적합합니다.",
 	"Settings_Chaperone_Style": "샤프롱 스타일",
-	"Settings_Chaperone_Style_0": "Grid (Dense)",
-	"Settings_Chaperone_Style_1": "Grid (Medium)",
+	"Settings_Chaperone_Style_0": "격자형 (고밀도)",
+	"Settings_Chaperone_Style_1": "격자형 (중간 밀도)",
 	"Settings_Chaperone_Style_2": "정사각형",
-	"Settings_Chaperone_Style_3": "Grid (Sparse)",
+	"Settings_Chaperone_Style_3": "격자형 (저밀도)",
 	"Settings_Chaperone_Style_4": "바닥 전용",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "바닥 경계 항상 표시",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
@@ -266,27 +284,13 @@
 	"Settings_Loading": "불러오는 중..",
 	"Settings_ResetToDefault": "기본 설정으로 초기화",
 	"Settings_ResetPageToDefault": "페이지를 기본 페이지로 초기화",
-	"Settings_ToggleButton_On": "On",
-	"Settings_ToggleButton_Off": "Off",
-	"Settings_ToggleButton_Disable": "Disable",
-	"Settings_ToggleButton_Enable": "Enable",
+	"Settings_ToggleButton_On": "켜기",
+	"Settings_ToggleButton_Off": "끄기",
+	"Settings_ToggleButton_Disable": "비활성",
+	"Settings_ToggleButton_Enable": "활성",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "SteamVR 설정",
-	"Settings_CameraTest": "카메라 및 성능 테스트",
-	"Settings_StartCameraTest": "테스트 시작",
-	"CameraTest_CheckingCamera": "카메라 확인 중...",
-	"CameraTest_CheckingTracking": "Checking tracking with camera...",
-	"CameraTest_CameraFailed": "카메라 통신 실패",
-	"CameraTest_TrackingFailed": "Tracking failed with camera enabled",
-	"CameraTest_Success": "카메라 테스트 통과",
-	"CameraTest": "카메라 테스트",
-	"CameraTestStatus_Evaluating": "확인 중",
-	"CameraTestStatus_Success": "성공",
-	"CameraTestStatus_Failure": "실패",
-	"Settings_CameraChaperone_RoomViewMode": "Room View Camera Mode",
-	"CameraRoomViewMode_EdgeA": "Colored Edges",
-	"CameraRoomViewMode_EdgeB": "Colored Ghosts",
-	"CameraRoomViewMode_VideoTranslucent": "Translucent Pass-Through",
-	"CameraRoomViewMode_VideoOpaque": "Opaque Pass-Through",
 	"Settings_MustRestart_Description": "일부 변경사항을 적용하려면 SteamVR을 재시작해야 합니다.",
 	"Settings_MustRestart_RestartSteamVR_Button": "SteamVR 다시 시작",
 	"Settings_MustQuitApp_Description": "변경을 적용하려면 현재 게임을 종료하십시오.",
@@ -300,11 +304,11 @@
 	"Settings_ViveTracker_Role": "트래커 유형",
 	"Settings_ViveTracker_Hand": "손",
 	"Settings_ViveTracker_Identify_NotConnected": "Vive 트래커가 연결되어 있지 않음.",
-	"Settings_ViveTracker_Identify_NotIdentifiable": "Vive Tracker isn't capable of identification.",
+	"Settings_ViveTracker_Identify_NotIdentifiable": "Vive 트래커가 인식되지 않습니다.",
 	"Settings_ViveTracker_Connected": "연결 되었습니다",
 	"Settings_ViveTracker_Disconnected": "연결이 끊겼습니다",
 	"Settings_PerApplication_VideoSettings": "어플리케이션별 비디오 설정",
-	"Settings_ChooseStartupOverlayApps": "Choose Startup Overlay Apps",
+	"Settings_ChooseStartupOverlayApps": "시작 오버레이 앱 선택",
 	"Settings_StartTheseOverlayAppsOnLaunch": "실행 시 다음 오버레이 앱 시작:",
 	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "발견된 오버레이 앱이 없습니다",
 	"Settings_ActiveController": "활성 컨트롤러",
