--- a/resources/webinterface/dashboard/localization/vrmonitor_latam.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_latam.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Marcar esta opción permitirá especificar una frecuencia de actualización diferente de la preferencia global para esta aplicación.",
 	"Settings_MimeTypes_Pancake_Header": "Selecciona una aplicación para lanzar aplicaciones de 2D en",
 	"Settings_Camera_EnableCamera": "Activar cámara",
-	"Settings_Camera_AllowCameraInDashboard": "Mostrar cámara en el control",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Activa una ventana de cámara conectada a tu control cuando el menú principal está arriba.",
+	"Settings_Camera_ShowOnController": "Show Camera on Controller",
+	"Settings_Camera_ShowOnController_Desc": "Turns on a camera window attached to your controller when the Dashboard is up.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Mostrar cámara en los límites de la habitación",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Activar vista de habitación",
+	"Settings_Camera_AllowCameraForRoomView": "Room View",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Accede a la vista de la habitación en cualquier momento haciendo doble clic en el botón Sistema",
 	"Settings_Camera_Compatibility": "Velocidad de la cámara",
 	"Settings_Camera_Rate_Hz": "Velocidad de la cámara (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Si experimentas pérdidas de seguimiento puede que te interese reducir la velocidad de la cámara, desactivarla o probar con otro puerto USB.",
+	"Settings_Camera_RoomViewStyle": "Room View Style",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Colored Edges",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Colored Ghosts",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Translucent Pass-Through",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Opaque Pass-Through",
+	"Settings_Camera_RoomView3D_Experimental": "3-D Room View is experimental.",
+	"Settings_Camera_RoomView3D_Unsupported": "3-D Room View is not supported on this headset.",
+	"Settings_CameraTest": "Prueba de cámara y rendimiento",
+	"Settings_StartCameraTest": "Iniciar prueba",
+	"CameraTest_CheckingCamera": "Comprobando la cámara...",
+	"CameraTest_CheckingTracking": "Comprobación de seguimiento con la cámara...",
+	"CameraTest_CameraFailed": "Error en la comunicación con la cámara",
+	"CameraTest_TrackingFailed": "Error en el seguimiento con la cámara habilitada",
+	"CameraTest_Success": "Prueba de cámara completada con éxito",
+	"CameraTest": "Test de la cámara",
+	"CameraTestStatus_Evaluating": "Corriente",
+	"CameraTestStatus_Success": "Hecho",
+	"CameraTestStatus_Failure": "Fallida",
 	"Advanced_Appearance": "Apariencia",
 	"Settings_Appearance_Background": "Fondo",
 	"Settings_Appearance_Background_NoSteam": "Iniciar Steam para ver cualquier fondo adicional.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Desactivado",
 	"Settings_ToggleButton_Disable": "Deshabilitar",
 	"Settings_ToggleButton_Enable": "Activar",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "Ajustes de SteamVR",
-	"Settings_CameraTest": "Prueba de cámara y rendimiento",
-	"Settings_StartCameraTest": "Iniciar prueba",
-	"CameraTest_CheckingCamera": "Comprobando la cámara...",
-	"CameraTest_CheckingTracking": "Comprobación de seguimiento con la cámara...",
-	"CameraTest_CameraFailed": "Error en la comunicación con la cámara",
-	"CameraTest_TrackingFailed": "Error en el seguimiento con la cámara habilitada",
-	"CameraTest_Success": "Prueba de cámara completada con éxito",
-	"CameraTest": "Test de la cámara",
-	"CameraTestStatus_Evaluating": "Corriente",
-	"CameraTestStatus_Success": "Hecho",
-	"CameraTestStatus_Failure": "Fallida",
-	"Settings_CameraChaperone_RoomViewMode": "Modo de cámara de vista de habitación",
-	"CameraRoomViewMode_EdgeA": "Bordes coloreados",
-	"CameraRoomViewMode_EdgeB": "Fantasmas coloreados",
-	"CameraRoomViewMode_VideoTranslucent": "Paso translúcido",
-	"CameraRoomViewMode_VideoOpaque": "Paso opaco",
 	"Settings_MustRestart_Description": "Debe reiniciarse SteamVR para que algunos cambios surtan efecto.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Reiniciar SteamVR",
 	"Settings_MustQuitApp_Description": "Para que los cambios surtan efecto, por favor, sal de juego.",
