--- a/resources/webinterface/dashboard/localization/vrmonitor_norwegian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_norwegian.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Hvis du velger dette alternativet, kan du angi en annen oppdateringsfrekvens for dette programmet enn den globale innstillingen.",
 	"Settings_MimeTypes_Pancake_Header": "Velg et program som 2D-programmer skal startes i",
 	"Settings_Camera_EnableCamera": "Slå på kamera",
-	"Settings_Camera_AllowCameraInDashboard": "Vis kamera på kontroller",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Slår på et kameravindu festet til kontrolleren, når dashbordet er oppe.",
+	"Settings_Camera_ShowOnController": "Vis kamera på kontroller",
+	"Settings_Camera_ShowOnController_Desc": "Slår på et kameravindu festet til kontrolleren når dashbordet er oppe.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Vis kamera ved rommets grense",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Slå på romvisning",
+	"Settings_Camera_AllowCameraForRoomView": "Romvisning",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Åpne romvisningen når som helst ved å dobbeltklikke på systemknappen.",
 	"Settings_Camera_Compatibility": "Kamerafrekvens",
 	"Settings_Camera_Rate_Hz": "Kamerafrekvens (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Hvis du opplever forstyrrelser av sporingen, kan det hjelpe å senke kamerafrekvensen, slå av kameraet eller prøve en annen USB-port.",
+	"Settings_Camera_RoomViewStyle": "Stil på romvisning",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Fargede kanter",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Fargede spøkelser",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Gjennomsiktig overgang",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Ugjennomsiktig overgang",
+	"Settings_Camera_RoomView3D_Experimental": "3D-romvisningen er eksperimentell.",
+	"Settings_Camera_RoomView3D_Unsupported": "3D-romvisning støttes ikke av dette hodesettet.",
+	"Settings_CameraTest": "Test kamera og ytelse",
+	"Settings_StartCameraTest": "Start test",
+	"CameraTest_CheckingCamera": "Sjekker kamera...",
+	"CameraTest_CheckingTracking": "Sjekker sporing med kamera...",
+	"CameraTest_CameraFailed": "Kamerakommunikasjon mislyktes",
+	"CameraTest_TrackingFailed": "Sporing mislyktes med kameraet aktivert",
+	"CameraTest_Success": "Kameratest bestått",
+	"CameraTest": "Kameratest",
+	"CameraTestStatus_Evaluating": "Sjekker",
+	"CameraTestStatus_Success": "Vellykket",
+	"CameraTestStatus_Failure": "Mislyktes",
 	"Advanced_Appearance": "Utseende",
 	"Settings_Appearance_Background": "Bakgrunn",
 	"Settings_Appearance_Background_NoSteam": "Start Steam for å se flere bakgrunner.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Av",
 	"Settings_ToggleButton_Disable": "Slå av",
 	"Settings_ToggleButton_Enable": "Slå på",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "SteamVR-innstillinger",
-	"Settings_CameraTest": "Test kamera og ytelse",
-	"Settings_StartCameraTest": "Start test",
-	"CameraTest_CheckingCamera": "Sjekker kamera...",
-	"CameraTest_CheckingTracking": "Sjekker sporing med kamera...",
-	"CameraTest_CameraFailed": "Kamerakommunikasjon mislyktes",
-	"CameraTest_TrackingFailed": "Sporing mislyktes med kameraet aktivert",
-	"CameraTest_Success": "Kameratest bestått",
-	"CameraTest": "Kameratest",
-	"CameraTestStatus_Evaluating": "Sjekker",
-	"CameraTestStatus_Success": "Vellykket",
-	"CameraTestStatus_Failure": "Mislyktes",
-	"Settings_CameraChaperone_RoomViewMode": "Romvisningens kameramodus",
-	"CameraRoomViewMode_EdgeA": "Fargede kanter",
-	"CameraRoomViewMode_EdgeB": "Fargede spøkelser",
-	"CameraRoomViewMode_VideoTranslucent": "Gjennomsiktig overgang",
-	"CameraRoomViewMode_VideoOpaque": "Ugjennomsiktig overgang",
 	"Settings_MustRestart_Description": "SteamVR må startes på nytt før visse endringer trer i kraft.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Start SteamVR på nytt",
 	"Settings_MustQuitApp_Description": "Det gjeldende spillet må avsluttes før endringer trer i kraft.",
