--- a/resources/webinterface/dashboard/localization/vrmonitor_polish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_polish.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Włączenie tej opcji umożliwi określanie dla tej aplikacji częstotliwości odświeżania innej od ustawienia globalnego.",
 	"Settings_MimeTypes_Pancake_Header": "Wybierz aplikację służącą do uruchamiania aplikacji 2D",
 	"Settings_Camera_EnableCamera": "Włącz kamerę",
-	"Settings_Camera_AllowCameraInDashboard": "Pokaż kamerę na kontrolerze",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Włącza okno kamery dołączone do twojego kontrolera, gdy panel główny jest na wierzchu.",
+	"Settings_Camera_ShowOnController": "Pokaż kamerę na kontrolerze",
+	"Settings_Camera_ShowOnController_Desc": "Włącza okno kamery dołączone do twojego kontrolera, gdy panel główny jest na wierzchu.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Pokaż kamerę na krańcach pokoju",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Uruchom widok pokoju",
+	"Settings_Camera_AllowCameraForRoomView": "Widok pokoju",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Uzyskaj dostęp do widoku pokoju w dowolnej chwili, wciskając dwa razy przycisk System.",
 	"Settings_Camera_Compatibility": "Częstotliwość kamery",
 	"Settings_Camera_Rate_Hz": "Częstotliwość kamery (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Jeżeli odczuwasz utratę śledzenia przez urządzenie, możesz zmniejszyć częstotliwość kamery, wyłączyć ją lub zmienić port USB.",
+	"Settings_Camera_RoomViewStyle": "Styl widoku pokoju",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Kolorowe krawędzie",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Kolorowe obiekty",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Przejrzyste przejście",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Nieprzejrzyste przejście",
+	"Settings_Camera_RoomView3D_Experimental": "Widok pokoju 3D jest eksperymentalny.",
+	"Settings_Camera_RoomView3D_Unsupported": "Widok pokoju 3D nie jest obsługiwany dla tych gogli.",
+	"Settings_CameraTest": "Przetestuj kamerę i wydajność",
+	"Settings_StartCameraTest": "Rozpocznij test",
+	"CameraTest_CheckingCamera": "Sprawdzanie kamery...",
+	"CameraTest_CheckingTracking": "Sprawdzanie śledzenia z kamerą...",
+	"CameraTest_CameraFailed": "Błąd komunikacji z kamerą",
+	"CameraTest_TrackingFailed": "Błąd śledzenia z włączoną kamerą",
+	"CameraTest_Success": "Test kamery pomyślny",
+	"CameraTest": "Test kamery",
+	"CameraTestStatus_Evaluating": "Sprawdzanie",
+	"CameraTestStatus_Success": "Sukces",
+	"CameraTestStatus_Failure": "Niepowodzenie",
 	"Advanced_Appearance": "Wygląd",
 	"Settings_Appearance_Background": "Tło",
 	"Settings_Appearance_Background_NoSteam": "Uruchom Steam, by zobaczyć wszelkie dodatkowe tła.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Wył.",
 	"Settings_ToggleButton_Disable": "Wyłącz",
 	"Settings_ToggleButton_Enable": "Włącz",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "Ustawienia SteamVR",
-	"Settings_CameraTest": "Przetestuj kamerę i wydajność",
-	"Settings_StartCameraTest": "Rozpocznij test",
-	"CameraTest_CheckingCamera": "Sprawdzanie kamery...",
-	"CameraTest_CheckingTracking": "Sprawdzanie śledzenia z kamerą...",
-	"CameraTest_CameraFailed": "Błąd komunikacji z kamerą",
-	"CameraTest_TrackingFailed": "Błąd śledzenia z włączoną kamerą",
-	"CameraTest_Success": "Test kamery pomyślny",
-	"CameraTest": "Test kamery",
-	"CameraTestStatus_Evaluating": "Sprawdzanie",
-	"CameraTestStatus_Success": "Sukces",
-	"CameraTestStatus_Failure": "Niepowodzenie",
-	"Settings_CameraChaperone_RoomViewMode": "Tryb kamery - widok pokoju",
-	"CameraRoomViewMode_EdgeA": "Kolorowe krawędzie",
-	"CameraRoomViewMode_EdgeB": "Kolorowe obiekty",
-	"CameraRoomViewMode_VideoTranslucent": "Przejrzyste przejście",
-	"CameraRoomViewMode_VideoOpaque": "Nieprzejrzyste przejście",
 	"Settings_MustRestart_Description": "SteamVR musi zostać zrestartowany, by niektóre zmiany mogły zostać wprowadzone.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Zrestartuj SteamVR",
 	"Settings_MustQuitApp_Description": "Wyjdź z obecnej gry, by zastosować zmiany.",
