--- a/resources/webinterface/dashboard/localization/vrmonitor_portuguese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_portuguese.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Marcar esta opção permitirá especificar uma taxa de atualização diferente da definição global para esta aplicação.",
 	"Settings_MimeTypes_Pancake_Header": "Seleciona em qual aplicação iniciar aplicações 2D",
 	"Settings_Camera_EnableCamera": "Ativar câmara",
-	"Settings_Camera_AllowCameraInDashboard": "Mostrar câmara no comando",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Ativa a janela de uma câmara anexada ao teu comando quando o Painel estiver ativo.",
+	"Settings_Camera_ShowOnController": "Mostrar câmara no comando",
+	"Settings_Camera_ShowOnController_Desc": "Ativa a janela de uma câmara anexada ao teu comando quando o Painel estiver ativo.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Mostrar câmara nos limites da divisão",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Ativar vista da divisão",
+	"Settings_Camera_AllowCameraForRoomView": "Vista da divisão",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Acede à vista da divisão a qualquer momento premindo duas vezes o botão System",
 	"Settings_Camera_Compatibility": "Taxa de câmara",
 	"Settings_Camera_Rate_Hz": "Taxa da câmara (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Se verificares uma perda na qualidade da deteção, talvez queiras usar uma taxa de câmara menor, desativar a câmara, ou usar uma porta USB diferente.",
+	"Settings_Camera_RoomViewStyle": "Estilo de vista da divisão",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Silhuetas coloridas",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Fantasmas coloridos",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Vista translúcida",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Vista opaca",
+	"Settings_Camera_RoomView3D_Experimental": "A vista da divisão em 3D é experimental.",
+	"Settings_Camera_RoomView3D_Unsupported": "A vista da divisão em 3D não é compatível com este headset.",
+	"Settings_CameraTest": "Testar câmara e desempenho",
+	"Settings_StartCameraTest": "Iniciar teste",
+	"CameraTest_CheckingCamera": "A verificar câmara...",
+	"CameraTest_CheckingTracking": "A verificar deteção com a câmara...",
+	"CameraTest_CameraFailed": "A comunicação com a câmara falhou",
+	"CameraTest_TrackingFailed": "A deteção com a câmara ativa falhou",
+	"CameraTest_Success": "Teste da câmara bem-sucedido",
+	"CameraTest": "Teste da câmara",
+	"CameraTestStatus_Evaluating": "A verificar",
+	"CameraTestStatus_Success": "Sucesso",
+	"CameraTestStatus_Failure": "Falhou",
 	"Advanced_Appearance": "Aparência",
 	"Settings_Appearance_Background": "Imagem de fundo",
 	"Settings_Appearance_Background_NoSteam": "Inicia o Steam para veres imagens de fundo adicionais.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Desligado",
 	"Settings_ToggleButton_Disable": "Desativar",
 	"Settings_ToggleButton_Enable": "Ativar",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "Definições do SteamVR",
-	"Settings_CameraTest": "Testar câmara e desempenho",
-	"Settings_StartCameraTest": "Iniciar teste",
-	"CameraTest_CheckingCamera": "A verificar câmara...",
-	"CameraTest_CheckingTracking": "A verificar deteção com a câmara...",
-	"CameraTest_CameraFailed": "A comunicação com a câmara falhou",
-	"CameraTest_TrackingFailed": "A deteção com a câmara ativa falhou",
-	"CameraTest_Success": "Teste da câmara bem-sucedido",
-	"CameraTest": "Teste da câmara",
-	"CameraTestStatus_Evaluating": "A verificar",
-	"CameraTestStatus_Success": "Sucesso",
-	"CameraTestStatus_Failure": "Falhou",
-	"Settings_CameraChaperone_RoomViewMode": "Modo de câmara: vista da divisão",
-	"CameraRoomViewMode_EdgeA": "Silhuetas coloridas",
-	"CameraRoomViewMode_EdgeB": "Fantasmas coloridos",
-	"CameraRoomViewMode_VideoTranslucent": "Vista translúcida",
-	"CameraRoomViewMode_VideoOpaque": "Vista opaca",
 	"Settings_MustRestart_Description": "O SteamVR tem de ser reiniciado para que algumas alterações entrem em efeito.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Reiniciar SteamVR",
 	"Settings_MustQuitApp_Description": "Por favor, sai do jogo atual para que as alterações entrem em efeito.",
