--- a/resources/webinterface/dashboard/localization/vrmonitor_russian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_russian.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Выбор этой опции позволит указать частоту обновления, отличную от исходных настроек для данного приложения.",
 	"Settings_MimeTypes_Pancake_Header": "Выберите приложение, в котором необходимо запустить 2D-приложения",
 	"Settings_Camera_EnableCamera": "Включить камеру",
-	"Settings_Camera_AllowCameraInDashboard": "Показать камеру на контроллере",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Включает окно камеры, привязанной к контроллеру, при показе меню.",
+	"Settings_Camera_ShowOnController": "Показать камеру на контроллере",
+	"Settings_Camera_ShowOnController_Desc": "Включает окно камеры, привязанной к контроллеру, при показе меню.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Показывать камеру на краю комнаты",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Включить обзор комнаты",
+	"Settings_Camera_AllowCameraForRoomView": "Обзор комнаты",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Перейдите к обзору комнаты в любое время, дважды нажав на кнопку System",
 	"Settings_Camera_Compatibility": "Частота обновления камеры",
 	"Settings_Camera_Rate_Hz": "Частота обновления камеры (Гц)",
 	"Settings_Camera_CompatibilityExplanation": "Если отслеживание не функционирует, возможно, вам следует понизить частоту обновления камеры, отключить камеру или попытаться подключиться к другому USB-порту.",
+	"Settings_Camera_RoomViewStyle": "Тип обзора комнаты",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Цветные края",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Цветные очертания",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Полупрозрачный обзор окружения",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Непрозрачный обзор окружения",
+	"Settings_Camera_RoomView3D_Experimental": "3D-обзор комнаты — экспериментальная функция.",
+	"Settings_Camera_RoomView3D_Unsupported": "3D-обзор комнаты не поддерживается на этом шлеме.",
+	"Settings_CameraTest": "Проверка камеры и её производительности",
+	"Settings_StartCameraTest": "Начать проверку",
+	"CameraTest_CheckingCamera": "Проверка камеры...",
+	"CameraTest_CheckingTracking": "Проверка отслеживания с помощью камеры...",
+	"CameraTest_CameraFailed": "Сбой связи с камерой",
+	"CameraTest_TrackingFailed": "Сбой отслеживания с включённой камерой",
+	"CameraTest_Success": "Проверка камеры успешно завершена",
+	"CameraTest": "Проверка камеры",
+	"CameraTestStatus_Evaluating": "Проверка",
+	"CameraTestStatus_Success": "Готово",
+	"CameraTestStatus_Failure": "Ошибка",
 	"Advanced_Appearance": "Внешний вид",
 	"Settings_Appearance_Background": "Фон",
 	"Settings_Appearance_Background_NoSteam": "Запустите Steam, чтобы увидеть другие фоны.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Выкл.",
 	"Settings_ToggleButton_Disable": "Отключить",
 	"Settings_ToggleButton_Enable": "Включить",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "Настройки SteamVR",
-	"Settings_CameraTest": "Проверка камеры и её производительности",
-	"Settings_StartCameraTest": "Начать проверку",
-	"CameraTest_CheckingCamera": "Проверка камеры...",
-	"CameraTest_CheckingTracking": "Проверка отслеживания с помощью камеры...",
-	"CameraTest_CameraFailed": "Сбой связи с камерой",
-	"CameraTest_TrackingFailed": "Сбой отслеживания с включённой камерой",
-	"CameraTest_Success": "Проверка камеры успешно завершена",
-	"CameraTest": "Проверка камеры",
-	"CameraTestStatus_Evaluating": "Проверка",
-	"CameraTestStatus_Success": "Готово",
-	"CameraTestStatus_Failure": "Ошибка",
-	"Settings_CameraChaperone_RoomViewMode": "Режим «Обзор комнаты» для камеры",
-	"CameraRoomViewMode_EdgeA": "Цветные края",
-	"CameraRoomViewMode_EdgeB": "Цветные очертания",
-	"CameraRoomViewMode_VideoTranslucent": "Полупрозрачный обзор окружения",
-	"CameraRoomViewMode_VideoOpaque": "Непрозрачный обзор окружения",
 	"Settings_MustRestart_Description": "Необходимо перезагрузить SteamVR, чтобы изменения вступили в силу.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Перезагрузить SteamVR",
 	"Settings_MustQuitApp_Description": "Выйдите из игры, чтобы изменения вступили в силу.",
