--- a/resources/webinterface/dashboard/localization/vrmonitor_schinese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_schinese.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "勾选此选项将允许为此应用程序指定不同于全局设置的刷新率。",
 	"Settings_MimeTypes_Pancake_Header": "选择一个要在其中启动 2D 应用程序的应用程序",
 	"Settings_Camera_EnableCamera": "启动摄像头",
-	"Settings_Camera_AllowCameraInDashboard": "在控制器上显示摄像头",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "主面板开启时，打开连接到您控制器上的摄像头窗口。",
+	"Settings_Camera_ShowOnController": "显示控制器摄像头",
+	"Settings_Camera_ShowOnController_Desc": "主面板开启时，打开连接到您控制器上的摄像头窗口。",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "在房间边缘显示摄像头",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "启用房间视角",
+	"Settings_Camera_AllowCameraForRoomView": "房间视角",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "通过双击系统键来随时访问房间视角",
 	"Settings_Camera_Compatibility": "摄像头频率",
 	"Settings_Camera_Rate_Hz": "摄像头频率（Hz）",
 	"Settings_Camera_CompatibilityExplanation": "如果您在使用过程中出现定位丢失的情况，您可以将摄像头频率调低、禁用摄像头、或是换用其他 USB 端口。",
+	"Settings_Camera_RoomViewStyle": "房间视角样式",
+	"Settings_Camera_RoomViewStyle_EdgeA": "彩色边缘",
+	"Settings_Camera_RoomViewStyle_EdgeB": "彩色重影",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "半透明穿透",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "不透明穿透",
+	"Settings_Camera_RoomView3D_Experimental": "3D 房间视角尚处于实验阶段",
+	"Settings_Camera_RoomView3D_Unsupported": "此头戴式显示器不支持 3D 房间视角",
+	"Settings_CameraTest": "测试摄像头和性能",
+	"Settings_StartCameraTest": "开始测试",
+	"CameraTest_CheckingCamera": "正在检查摄像头…",
+	"CameraTest_CheckingTracking": "正在检查摄像头定位…",
+	"CameraTest_CameraFailed": "摄像头通信失败",
+	"CameraTest_TrackingFailed": "摄像头启用时定位失败",
+	"CameraTest_Success": "通过摄像头测试",
+	"CameraTest": "摄像头测试",
+	"CameraTestStatus_Evaluating": "正在检查",
+	"CameraTestStatus_Success": "成功",
+	"CameraTestStatus_Failure": "失败",
 	"Advanced_Appearance": "外观",
 	"Settings_Appearance_Background": "背景",
 	"Settings_Appearance_Background_NoSteam": "启动 Steam 以查看所有额外背景。",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "关闭",
 	"Settings_ToggleButton_Disable": "禁用",
 	"Settings_ToggleButton_Enable": "启用",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "SteamVR 设置",
-	"Settings_CameraTest": "测试摄像头和性能",
-	"Settings_StartCameraTest": "开始测试",
-	"CameraTest_CheckingCamera": "正在检查摄像头…",
-	"CameraTest_CheckingTracking": "正在检查摄像头定位…",
-	"CameraTest_CameraFailed": "摄像头通信失败",
-	"CameraTest_TrackingFailed": "摄像头启用时定位失败",
-	"CameraTest_Success": "通过摄像头测试",
-	"CameraTest": "摄像头测试",
-	"CameraTestStatus_Evaluating": "正在检查",
-	"CameraTestStatus_Success": "成功",
-	"CameraTestStatus_Failure": "失败",
-	"Settings_CameraChaperone_RoomViewMode": "房间视角摄像头模式",
-	"CameraRoomViewMode_EdgeA": "彩色边缘",
-	"CameraRoomViewMode_EdgeB": "彩色重影",
-	"CameraRoomViewMode_VideoTranslucent": "半透明穿透",
-	"CameraRoomViewMode_VideoOpaque": "不透明穿透",
 	"Settings_MustRestart_Description": "必须重启 SteamVR 以使部分变更生效。",
 	"Settings_MustRestart_RestartSteamVR_Button": "重启 SteamVR",
 	"Settings_MustQuitApp_Description": "请退出当前游戏以使更改生效。",
