--- a/resources/webinterface/dashboard/localization/vrmonitor_swedish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_swedish.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Om du markerar detta alternativ, kan du specificera en annan uppdateringsfrekvens än den globala inställningen för denna applikation.",
 	"Settings_MimeTypes_Pancake_Header": "Välj en applikation att starta 2D-applikationer i",
 	"Settings_Camera_EnableCamera": "Aktivera kamera",
-	"Settings_Camera_AllowCameraInDashboard": "Visa kamera på kontroll",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Öppnar ett kamerafönster fäst på din kontroll när instrumentpanelen är uppe.",
+	"Settings_Camera_ShowOnController": "Visa kamera på kontroll",
+	"Settings_Camera_ShowOnController_Desc": "Öppnar ett kamerafönster fäst på din kontroll när instrumentpanelen är uppe.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Visa kamera vid rummets gräns",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Aktivera rumsvy",
+	"Settings_Camera_AllowCameraForRoomView": "Rumsvy",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Gå in i rumsvy när som helst genom att dubbeltrycka på Systemknappen",
 	"Settings_Camera_Compatibility": "Kamerafrekvens",
 	"Settings_Camera_Rate_Hz": "Kamerafrekvens (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Om du upplever störningar i spårningen kan du behöva ställa in en lägre kamerafrekvens, inaktivera kameran eller pröva med en annan USB-port.",
+	"Settings_Camera_RoomViewStyle": "Stil på rumsvyn",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Färgade kanter",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Färgade silhuetter",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Genomskinlig genomströmning",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Ogenomskinlig genomströmning",
+	"Settings_Camera_RoomView3D_Experimental": "3D-rumsvyn är experimentell.",
+	"Settings_Camera_RoomView3D_Unsupported": "3D-rumsvy stöds inte av detta headset.",
+	"Settings_CameraTest": "Testa kamera och prestanda",
+	"Settings_StartCameraTest": "Påbörja test",
+	"CameraTest_CheckingCamera": "Kontrollerar kamera ...",
+	"CameraTest_CheckingTracking": "Kontrollerar spårning med kamera ...",
+	"CameraTest_CameraFailed": "Kommunikation med kamera misslyckades",
+	"CameraTest_TrackingFailed": "Spårning misslyckades med kameran aktiverad",
+	"CameraTest_Success": "Kameratest lyckades",
+	"CameraTest": "Kameratest",
+	"CameraTestStatus_Evaluating": "Kontrollerar",
+	"CameraTestStatus_Success": "Lyckades",
+	"CameraTestStatus_Failure": "Misslyckades",
 	"Advanced_Appearance": "Utseende",
 	"Settings_Appearance_Background": "Bakgrund",
 	"Settings_Appearance_Background_NoSteam": "Starta Steam för att se alla ytterligare bakgrunder.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Av",
 	"Settings_ToggleButton_Disable": "Inaktivera",
 	"Settings_ToggleButton_Enable": "Aktivera",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "SteamVR-inställningar",
-	"Settings_CameraTest": "Testa kamera och prestanda",
-	"Settings_StartCameraTest": "Påbörja test",
-	"CameraTest_CheckingCamera": "Kontrollerar kamera ...",
-	"CameraTest_CheckingTracking": "Kontrollerar spårning med kamera ...",
-	"CameraTest_CameraFailed": "Kommunikation med kamera misslyckades",
-	"CameraTest_TrackingFailed": "Spårning misslyckades med kameran aktiverad",
-	"CameraTest_Success": "Kameratest lyckades",
-	"CameraTest": "Kameratest",
-	"CameraTestStatus_Evaluating": "Kontrollerar",
-	"CameraTestStatus_Success": "Lyckades",
-	"CameraTestStatus_Failure": "Misslyckades",
-	"Settings_CameraChaperone_RoomViewMode": "Kameraläge för rumsvyn",
-	"CameraRoomViewMode_EdgeA": "Färgade kanter",
-	"CameraRoomViewMode_EdgeB": "Färgade silhuetter",
-	"CameraRoomViewMode_VideoTranslucent": "Genomskinlig genomströmning",
-	"CameraRoomViewMode_VideoOpaque": "Ogenomskinlig genomströmning",
 	"Settings_MustRestart_Description": "SteamVR måste startas om för att ändringarna ska träda i kraft.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Starta om SteamVR",
 	"Settings_MustQuitApp_Description": "Avsluta det nuvarande spelet så att ändringarna kan träda i kraft.",
