--- a/resources/webinterface/dashboard/localization/vrmonitor_thai.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_thai.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "การทำเครื่องหมายที่ตัวเลือกนี้จะทำให้ระบุอัตรารีเฟรชแตกต่างจากการตั้งค่าหลักสำหรับแอปพลิเคชันนี้ได้",
 	"Settings_MimeTypes_Pancake_Header": "เลือกแอปพลิเคชันเพื่อเปิดแอปพลิเคชันแบบ 2D ใน",
 	"Settings_Camera_EnableCamera": "เปิดการใช้งานกล้อง",
-	"Settings_Camera_AllowCameraInDashboard": "แสดงกล้องบนคอนโทรลเลอร์",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "เปิดหน้าต่างกล้องที่แนบกับคอนโทรลเลอร์ของคุณ เมื่อกระดานรวมเปิดขึ้นมา",
+	"Settings_Camera_ShowOnController": "แสดงกล้องบนคอนโทรลเลอร์",
+	"Settings_Camera_ShowOnController_Desc": "เปิดหน้าต่างกล้องที่แนบกับคอนโทรลเลอร์ของคุณ เมื่อกระดานรวมเปิดขึ้นมา",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "แสดงกล้องที่ขอบห้อง",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "เปิดการใช้งานมุมมองห้อง",
+	"Settings_Camera_AllowCameraForRoomView": "มุมมองห้อง",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "เข้าถึงมุมมองห้องเมื่อไหร่ก็ได้ โดยการคลิกปุ่มระบบสองครั้ง",
 	"Settings_Camera_Compatibility": "อัตรากล้อง",
 	"Settings_Camera_Rate_Hz": "อัตรากล้อง (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "หากคุณประสบปัญหาสูญเสียการติดตาม คุณอาจต้องกำหนดอัตรากล้องให้ต่ำลง ปิดการใช้งานกล้อง หรือลองเสียบพอร์ต USB ช่องอื่น",
+	"Settings_Camera_RoomViewStyle": "รูปแบบมุมมองห้อง",
+	"Settings_Camera_RoomViewStyle_EdgeA": "เส้นขอบเน้นสี",
+	"Settings_Camera_RoomViewStyle_EdgeB": "ร่างเงาเน้นสี",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "มองผ่านแบบโปร่งแสง",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "มองผ่านแบบทึบแสง",
+	"Settings_Camera_RoomView3D_Experimental": "มุมมองห้องแบบ 3 มิติอยู่ในขั้นทดลอง",
+	"Settings_Camera_RoomView3D_Unsupported": "เครื่องสวมศีรษะนี้ไม่รองรับมุมมองห้องแบบ 3 มิติ",
+	"Settings_CameraTest": "ทดสอบกล้องและประสิทธิภาพ",
+	"Settings_StartCameraTest": "เริ่มต้นทดสอบ",
+	"CameraTest_CheckingCamera": "กำลังตรวจสอบกล้อง...",
+	"CameraTest_CheckingTracking": "กำลังตรวจสอบการติดตามด้วยกล้อง",
+	"CameraTest_CameraFailed": "การติดต่อกล้องล้มเหลว",
+	"CameraTest_TrackingFailed": "การติดตามล้มเหลวเมื่อเปิดการใช้งานกล้อง",
+	"CameraTest_Success": "การทดสอบกล้องผ่านเกณฑ์",
+	"CameraTest": "ทดสอบมุมกล้อง",
+	"CameraTestStatus_Evaluating": "กำลังตรวจสอบ",
+	"CameraTestStatus_Success": "สำเร็จ",
+	"CameraTestStatus_Failure": "ล้มเหลว",
 	"Advanced_Appearance": "ลักษณะที่ปรากฏ",
 	"Settings_Appearance_Background": "พื้นหลัง",
 	"Settings_Appearance_Background_NoSteam": "เปิด Steam เพื่อดูภาพพื้นหลังเพิ่มเติม",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "ปิด",
 	"Settings_ToggleButton_Disable": "ปิดการใช้งาน",
 	"Settings_ToggleButton_Enable": "เปิดการใช้งาน",
+	"Settings_2D": "2 มิติ",
+	"Settings_3D": "3 มิติ",
 	"Settings_Header_SteamVR": "การตั้งค่า SteamVR",
-	"Settings_CameraTest": "ทดสอบกล้องและประสิทธิภาพ",
-	"Settings_StartCameraTest": "เริ่มต้นทดสอบ",
-	"CameraTest_CheckingCamera": "กำลังตรวจสอบกล้อง...",
-	"CameraTest_CheckingTracking": "กำลังตรวจสอบการติดตามด้วยกล้อง",
-	"CameraTest_CameraFailed": "การติดต่อกล้องล้มเหลว",
-	"CameraTest_TrackingFailed": "การติดตามล้มเหลวเมื่อเปิดการใช้งานกล้อง",
-	"CameraTest_Success": "การทดสอบกล้องผ่านเกณฑ์",
-	"CameraTest": "ทดสอบมุมกล้อง",
-	"CameraTestStatus_Evaluating": "กำลังตรวจสอบ",
-	"CameraTestStatus_Success": "สำเร็จ",
-	"CameraTestStatus_Failure": "ล้มเหลว",
-	"Settings_CameraChaperone_RoomViewMode": "โหมดกล้องมุมมองห้อง",
-	"CameraRoomViewMode_EdgeA": "เส้นขอบเน้นสี",
-	"CameraRoomViewMode_EdgeB": "ร่างเงาเน้นสี",
-	"CameraRoomViewMode_VideoTranslucent": "มองผ่านแบบโปร่งแสง",
-	"CameraRoomViewMode_VideoOpaque": "มองผ่านแบบทึบแสง",
 	"Settings_MustRestart_Description": "ต้องรีสตาร์ท SteamVR เพื่อให้การเปลี่ยนแปลงส่งผล",
 	"Settings_MustRestart_RestartSteamVR_Button": "รีสตาร์ท SteamVR",
 	"Settings_MustQuitApp_Description": "กรุณาออกเกมในปัจจุบันเพื่อให้การเปลี่ยนแปลงค่ามีผล",
