--- a/resources/webinterface/dashboard/localization/vrmonitor_turkish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_turkish.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Checking this option will allow specifying a different refresh rate from the global setting for this application.",
 	"Settings_MimeTypes_Pancake_Header": "2B uygulamaların çalıştırılacağı uygulamayı seçin",
 	"Settings_Camera_EnableCamera": "Kamerayı Etkinleştir",
-	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Pano açık olduğunda kontrolcünüze bağlı kamera penceresini açar.",
+	"Settings_Camera_ShowOnController": "Show Camera on Controller",
+	"Settings_Camera_ShowOnController_Desc": "Turns on a camera window attached to your controller when the Dashboard is up.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Enable Room View",
+	"Settings_Camera_AllowCameraForRoomView": "Room View",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Sistem butonuna iki kez tıklayarak istediğiniz zaman Oda Görünümüne erişin",
 	"Settings_Camera_Compatibility": "Kamera oranı",
 	"Settings_Camera_Rate_Hz": "Camera Rate (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Takip kaybı yaşarsanız, daha düşük bir Kamera Oranı ayarlayın, kamerayı devre dışı bırakın ya da farklı bir USB bağlantı noktasını deneyebilirsiniz.",
+	"Settings_Camera_RoomViewStyle": "Room View Style",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Colored Edges",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Colored Ghosts",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Translucent Pass-Through",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Opaque Pass-Through",
+	"Settings_Camera_RoomView3D_Experimental": "3-D Room View is experimental.",
+	"Settings_Camera_RoomView3D_Unsupported": "3-D Room View is not supported on this headset.",
+	"Settings_CameraTest": "Test camera and performance",
+	"Settings_StartCameraTest": "Start Test",
+	"CameraTest_CheckingCamera": "Checking camera...",
+	"CameraTest_CheckingTracking": "Checking tracking with camera...",
+	"CameraTest_CameraFailed": "Camera communication failed",
+	"CameraTest_TrackingFailed": "Tracking failed with camera enabled",
+	"CameraTest_Success": "Camera Test Passed",
+	"CameraTest": "Camera Test",
+	"CameraTestStatus_Evaluating": "Checking",
+	"CameraTestStatus_Success": "Success",
+	"CameraTestStatus_Failure": "Failed",
 	"Advanced_Appearance": "Görünüm",
 	"Settings_Appearance_Background": "Arka Plan",
 	"Settings_Appearance_Background_NoSteam": "Launch Steam to see any any additional backgrounds.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Off",
 	"Settings_ToggleButton_Disable": "Disable",
 	"Settings_ToggleButton_Enable": "Enable",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "SteamVR Settings",
-	"Settings_CameraTest": "Test camera and performance",
-	"Settings_StartCameraTest": "Start Test",
-	"CameraTest_CheckingCamera": "Checking camera...",
-	"CameraTest_CheckingTracking": "Checking tracking with camera...",
-	"CameraTest_CameraFailed": "Camera communication failed",
-	"CameraTest_TrackingFailed": "Tracking failed with camera enabled",
-	"CameraTest_Success": "Camera Test Passed",
-	"CameraTest": "Camera Test",
-	"CameraTestStatus_Evaluating": "Checking",
-	"CameraTestStatus_Success": "Success",
-	"CameraTestStatus_Failure": "Failed",
-	"Settings_CameraChaperone_RoomViewMode": "Room View Camera Mode",
-	"CameraRoomViewMode_EdgeA": "Colored Edges",
-	"CameraRoomViewMode_EdgeB": "Colored Ghosts",
-	"CameraRoomViewMode_VideoTranslucent": "Translucent Pass-Through",
-	"CameraRoomViewMode_VideoOpaque": "Opaque Pass-Through",
 	"Settings_MustRestart_Description": "SteamVR must be restarted for some changes to take effect.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Restart SteamVR",
 	"Settings_MustQuitApp_Description": "Please quit the current game for changes to take effect.",
