--- a/resources/webinterface/dashboard/localization/vrmonitor_ukrainian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_ukrainian.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Вибір цього параметра дозволить вказати іншу частоту оновлення у глобальних налаштуваннях для цього застосунку.",
 	"Settings_MimeTypes_Pancake_Header": "Оберіть застосунок, у якому слід запустити двомірний застосунок",
 	"Settings_Camera_EnableCamera": "Увімкнути камеру",
-	"Settings_Camera_AllowCameraInDashboard": "Показати камеру на контролері",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Коли показується панель навігації, то вмикає вікно камери, прив’язаної до вашого контролера.",
+	"Settings_Camera_ShowOnController": "Показати камеру на контролері",
+	"Settings_Camera_ShowOnController_Desc": "Коли показується панель навігації, то вмикає вікно камери, прив’язаної до вашого контролера.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Показати камеру на межі кімнати",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Увімкнути огляд кімнати",
+	"Settings_Camera_AllowCameraForRoomView": "Огляд кімнати",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Перехід до огляду кімнати в будь-який час шляхом подвійного натискання кнопки System",
 	"Settings_Camera_Compatibility": "Частота оновлення камери",
 	"Settings_Camera_Rate_Hz": "Частота оновлення камери (Гц)",
 	"Settings_Camera_CompatibilityExplanation": "Якщо ви втрачаєте стеження, спробуйте понизити частоту камери, вимкнути камеру чи спробувати інший порт USB.",
+	"Settings_Camera_RoomViewStyle": "Стиль огляду кімнати",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Кольорові грані",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Кольорові привиди",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Напівпрозоре ретранслювання",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Непрозоре ретранслювання",
+	"Settings_Camera_RoomView3D_Experimental": "3D-огляд кімнати — експериментальна функція.",
+	"Settings_Camera_RoomView3D_Unsupported": "3D-огляд кімнати не підтримується цим шоломом.",
+	"Settings_CameraTest": "Перевірка камери та її швидкодії",
+	"Settings_StartCameraTest": "Почати перевірку",
+	"CameraTest_CheckingCamera": "Перевірка камери…",
+	"CameraTest_CheckingTracking": "Перевірка відстеження за допомогою камери…",
+	"CameraTest_CameraFailed": "Помилка з’єднання з камерою",
+	"CameraTest_TrackingFailed": "Помилка відстеження за допомогою увімкненої камери",
+	"CameraTest_Success": "Перевірка камери виконана успішно",
+	"CameraTest": "Перевірка камери",
+	"CameraTestStatus_Evaluating": "Перевірка",
+	"CameraTestStatus_Success": "Готово",
+	"CameraTestStatus_Failure": "Помилка",
 	"Advanced_Appearance": "Вигляд",
 	"Settings_Appearance_Background": "Тло",
 	"Settings_Appearance_Background_NoSteam": "Запустіть Steam, щоб переглянути додаткові варіанти тла.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Вимк.",
 	"Settings_ToggleButton_Disable": "Вимкнути",
 	"Settings_ToggleButton_Enable": "Увімкнути",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "Налаштування SteamVR",
-	"Settings_CameraTest": "Перевірка камери та її швидкодії",
-	"Settings_StartCameraTest": "Почати перевірку",
-	"CameraTest_CheckingCamera": "Перевірка камери…",
-	"CameraTest_CheckingTracking": "Перевірка відстеження за допомогою камери…",
-	"CameraTest_CameraFailed": "Помилка з’єднання з камерою",
-	"CameraTest_TrackingFailed": "Помилка відстеження за допомогою увімкненої камери",
-	"CameraTest_Success": "Перевірка камери виконана успішно",
-	"CameraTest": "Перевірка камери",
-	"CameraTestStatus_Evaluating": "Перевірка",
-	"CameraTestStatus_Success": "Готово",
-	"CameraTestStatus_Failure": "Помилка",
-	"Settings_CameraChaperone_RoomViewMode": "Режим камери «Огляд кімнати»",
-	"CameraRoomViewMode_EdgeA": "Кольорові грані",
-	"CameraRoomViewMode_EdgeB": "Кольорові привиди",
-	"CameraRoomViewMode_VideoTranslucent": "Напівпрозоре ретранслювання",
-	"CameraRoomViewMode_VideoOpaque": "Непрозоре ретранслювання",
 	"Settings_MustRestart_Description": "Для внесення змін потрібно перезапустити SteamVR.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Перезапустити SteamVR",
 	"Settings_MustQuitApp_Description": "Будь ласка, вийдіть із поточної гри для внесення змін.",
