--- a/resources/webinterface/dashboard/localization/vrmonitor_vietnamese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_vietnamese.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Lựa chọn này cho phép xác định tốc độ làm mới khung hình khác với thiết lập chung cho ứng dụng này.",
 	"Settings_MimeTypes_Pancake_Header": "Chọn một ứng dụng để chạy cùng với các ứng dụng 2D",
 	"Settings_Camera_EnableCamera": "Bật camera",
-	"Settings_Camera_AllowCameraInDashboard": "Hiện camera trên tay cầm",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Bật một cửa sổ camera được gắn vào bộ điều khiển của bạn khi trang tổng quan hiện.",
+	"Settings_Camera_ShowOnController": "Hiện camera trên tay cầm",
+	"Settings_Camera_ShowOnController_Desc": "Bật một cửa sổ camera được gắn vào bộ điều khiển của bạn khi hiện trang tổng quan.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Hiện camera ở góc phòng",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Bật hiển thị phòng",
+	"Settings_Camera_AllowCameraForRoomView": "Chế độ nhìn phòng",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Truy cập hiển thị phòng bất kỳ lúc nào khi nhấp đôi nút System",
 	"Settings_Camera_Compatibility": "Tốc độ camera",
 	"Settings_Camera_Rate_Hz": "Tốc độ camera (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Nếu bạn gặp hiện tượng mất khả năng theo dõi định vị, hãy thử hạ thấp tốc độ camera, tắt nó đi, hoặc thử cổng USB khác.",
+	"Settings_Camera_RoomViewStyle": "Kiểu chế độ nhìn phòng",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Màu các cạnh",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Màu mảng mờ ảo",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Trong suốt có thể xuyên qua",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Cản quang có thể xuyên qua",
+	"Settings_Camera_RoomView3D_Experimental": "Chế độ nhìn phòng 3D đang thử nghiệm.",
+	"Settings_Camera_RoomView3D_Unsupported": "Chế độ nhìn phòng 3D không được hỗ trợ trên mũ chụp này.",
+	"Settings_CameraTest": "Kiểm tra camera và hiệu suất",
+	"Settings_StartCameraTest": "Bắt đầu thử",
+	"CameraTest_CheckingCamera": "Kiểm tra camera...",
+	"CameraTest_CheckingTracking": "Kiểm tra việc theo dõi với camera...",
+	"CameraTest_CameraFailed": "Giao tiếp với camera không thành công",
+	"CameraTest_TrackingFailed": "Theo dõi không thành công với camera đã bật",
+	"CameraTest_Success": "Vượt qua bài kiểm tra camera",
+	"CameraTest": "Kiểm tra camera",
+	"CameraTestStatus_Evaluating": "Đang kiểm tra",
+	"CameraTestStatus_Success": "Thành công",
+	"CameraTestStatus_Failure": "Thất bại",
 	"Advanced_Appearance": "Diện mạo",
 	"Settings_Appearance_Background": "Hình nền",
 	"Settings_Appearance_Background_NoSteam": "Khởi động Steam để xem hình nền bổ sung bất kỳ.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Tắt",
 	"Settings_ToggleButton_Disable": "Tắt",
 	"Settings_ToggleButton_Enable": "Bật",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "Thiết lập SteamVR",
-	"Settings_CameraTest": "Kiểm tra camera và hiệu suất",
-	"Settings_StartCameraTest": "Bắt đầu thử",
-	"CameraTest_CheckingCamera": "Kiểm tra camera...",
-	"CameraTest_CheckingTracking": "Kiểm tra việc theo dõi với camera...",
-	"CameraTest_CameraFailed": "Giao tiếp với camera không thành công",
-	"CameraTest_TrackingFailed": "Theo dõi không thành công với camera đã bật",
-	"CameraTest_Success": "Vượt qua bài kiểm tra camera",
-	"CameraTest": "Kiểm tra camera",
-	"CameraTestStatus_Evaluating": "Đang kiểm tra",
-	"CameraTestStatus_Success": "Thành công",
-	"CameraTestStatus_Failure": "Thất bại",
-	"Settings_CameraChaperone_RoomViewMode": "Chế độ camera cho góc nhìn phòng",
-	"CameraRoomViewMode_EdgeA": "Màu các cạnh",
-	"CameraRoomViewMode_EdgeB": "Màu mảng mờ ảo",
-	"CameraRoomViewMode_VideoTranslucent": "Trong suốt có thể xuyên qua",
-	"CameraRoomViewMode_VideoOpaque": "Cản quang có thể xuyên qua",
 	"Settings_MustRestart_Description": "Phải khởi động lại SteamVR để một số thay đổi có hiệu lực.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Khởi động lại SteamVR",
 	"Settings_MustQuitApp_Description": "Xin thoát trò đang chơi để các thay đổi được thực hiện.",
