--- a/content/vrmonitor/translations/vrmonitor_swedish.txt
+++ b/content/vrmonitor/translations/vrmonitor_swedish.txt
@@ -2125,7 +2125,7 @@
 "[english]Settings_StatusWindowHidePopups_Text"	"Suppress VR warnings and alerts when minimized"
 "MenuAction_ShowControllerBinding"	"Kontrollinställningar"
 "[english]MenuAction_ShowControllerBinding"	"Controller Settings"
-"MenuAction_ShowManageTrackers"	"Hantera Vive Trackers"
+"MenuAction_ShowManageTrackers"	"Hantera Vive-spårare"
 "[english]MenuAction_ShowManageTrackers"	"Manage Vive Trackers"
 "Settings_BaseStation_BluetoothBusy"	"Väntar på Bluetooth..."
 "[english]Settings_BaseStation_BluetoothBusy"	"Waiting for Bluetooth..."
@@ -2625,5 +2625,15 @@
 "[english]Settings_Developer_Title"	"Developer Settings"
 "MenuAction_PerformanceGraph"	"Visa prestandagraf"
 "[english]MenuAction_PerformanceGraph"	"Display Performance Graph"
+"Advanced_NormalFrame"	"Normal bild"
+"[english]Advanced_NormalFrame"	"Normal Frame"
+"Advanced_MotionSmoothedFrame"	"Återprojicerad med rörelseutjämning"
+"[english]Advanced_MotionSmoothedFrame"	"Reprojected w/ Motion Smoothing"
+"Advanced_ReprojectedFrame"	"Återprojicerad utan rörelseutjämning"
+"[english]Advanced_ReprojectedFrame"	"Reprojected w/o Motion Smoothing"
+"Advanced_DroppedFrame"	"Visningsfel"
+"[english]Advanced_DroppedFrame"	"Display Error"
+"Advanced_AppRequestedThrottling"	"App begärde begränsning (cpu-bunden)"
+"[english]Advanced_AppRequestedThrottling"	"App requested throttling (cpu bound)"
 }
 }
