--- a/content/vrmonitor/translations/vrmonitor_tchinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_tchinese.txt
@@ -143,7 +143,7 @@
 "[english]SteamVRSystemState_Off"	"Off"
 "SteamVRSystemState_Ready"	"就緒"
 "[english]SteamVRSystemState_Ready"	"Now Playing"
-"SteamVRSystemState_NotReady"	"未就绪"
+"SteamVRSystemState_NotReady"	" "
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"搜尋中…"
 "[english]SteamVRSystemState_Connecting"	"Searching..."
@@ -2009,7 +2009,7 @@
 "[english]BluetoothControllerStatus_Unknown"	"Unknown"
 "BluetoothControllerStatus_ServiceNotFound"	"未找到藍牙服務。請確認您的 SteamVR 安裝狀態。"
 "[english]BluetoothControllerStatus_ServiceNotFound"	"Bluetooth capability not found. Please verify your SteamVR installation."
-"BluetoothControllerStatus_ServiceError"	"藍牙服務錯誤。連結狀態：%1"
+"BluetoothControllerStatus_ServiceError"	"藍牙服務錯誤：BT-%1"
 "[english]BluetoothControllerStatus_ServiceError"	"Bluetooth Error: BT-%1"
 "BluetoothControllerStatus_NoBluetoothDevice"	"未偵測到藍牙功能。"
 "[english]BluetoothControllerStatus_NoBluetoothDevice"	"Bluetooth capability not detected."
@@ -2459,5 +2459,15 @@
 "[english]Settings_Developer_Title"	"Developer Settings"
 "MenuAction_PerformanceGraph"	"顯示效能圖表"
 "[english]MenuAction_PerformanceGraph"	"Display Performance Graph"
+"Advanced_NormalFrame"	"正常幀"
+"[english]Advanced_NormalFrame"	"Normal Frame"
+"Advanced_MotionSmoothedFrame"	"以動態平滑再投影"
+"[english]Advanced_MotionSmoothedFrame"	"Reprojected w/ Motion Smoothing"
+"Advanced_ReprojectedFrame"	"未以動態平滑再投影"
+"[english]Advanced_ReprojectedFrame"	"Reprojected w/o Motion Smoothing"
+"Advanced_DroppedFrame"	"顯示器錯誤"
+"[english]Advanced_DroppedFrame"	"Display Error"
+"Advanced_AppRequestedThrottling"	"應用程式要求限制（受限於 CPU）"
+"[english]Advanced_AppRequestedThrottling"	"App requested throttling (cpu bound)"
 }
 }
