--- a/content/vrmonitor/translations/vrmonitor_ukrainian.txt
+++ b/content/vrmonitor/translations/vrmonitor_ukrainian.txt
@@ -957,7 +957,7 @@
 "[english]Settings_USB_Component_WatchmanBoard"	"Tracking Board"
 "Settings_USB_Component_Camera"	"Камера"
 "[english]Settings_USB_Component_Camera"	"Camera"
-"Settings_USB_Component_Audio"	"Звуковий пристрій"
+"Settings_USB_Component_Audio"	"Аудіопристрій"
 "[english]Settings_USB_Component_Audio"	"Audio Device"
 "Settings_USB_Component_HTCBoard"	"Головна плата"
 "[english]Settings_USB_Component_HTCBoard"	"Main Board"
@@ -2616,13 +2616,13 @@
 "[english]Settings_Developer_Title"	"Developer Settings"
 "MenuAction_PerformanceGraph"	"Показати графік швидкодії"
 "[english]MenuAction_PerformanceGraph"	"Display Performance Graph"
-"Advanced_NormalFrame"	"Нормальний кадр"
+"Advanced_NormalFrame"	"Звичайний кадр"
 "[english]Advanced_NormalFrame"	"Normal Frame"
 "Advanced_MotionSmoothedFrame"	"Репроектовано зі згладжуванням рухів"
 "[english]Advanced_MotionSmoothedFrame"	"Reprojected w/ Motion Smoothing"
 "Advanced_ReprojectedFrame"	"Репроектовано без згладжування рухів"
 "[english]Advanced_ReprojectedFrame"	"Reprojected w/o Motion Smoothing"
-"Advanced_DroppedFrame"	"Помилка екрана"
+"Advanced_DroppedFrame"	"Помилка показу"
 "[english]Advanced_DroppedFrame"	"Display Error"
 "Advanced_AppRequestedThrottling"	"Запитані застосунком обмеження (пов’язані з ЦП)"
 "[english]Advanced_AppRequestedThrottling"	"App requested throttling (cpu bound)"
