--- a/content/vrmonitor/translations/vrmonitor_vietnamese.txt
+++ b/content/vrmonitor/translations/vrmonitor_vietnamese.txt
@@ -2618,5 +2618,7 @@
 "[english]Advanced_ReprojectedFrame"	"Reprojected w/o Motion Smoothing"
 "Advanced_DroppedFrame"	"Lỗi hiển thị"
 "[english]Advanced_DroppedFrame"	"Display Error"
+"Advanced_AppRequestedThrottling"	"Ứng dụng đã yêu cầu tiết lưu (hạn chế CPU)"
+"[english]Advanced_AppRequestedThrottling"	"App requested throttling (cpu bound)"
 }
 }
