--- a/resources/webinterface/dashboard/localization/vrmonitor_spanish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_spanish.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Marcar esta opción permitirá especificar una frecuencia de actualización diferente de la preferencia global para esta aplicación.",
 	"Settings_MimeTypes_Pancake_Header": "Selecciona una aplicación para lanzar aplicaciones 2D en",
 	"Settings_Camera_EnableCamera": "Activar cámara",
-	"Settings_Camera_AllowCameraInDashboard": "Mostrar cámara en el mando",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "Activa una ventana de cámara conectada a tu mando cuando el menú principal está abierto.",
+	"Settings_Camera_ShowOnController": "Mostrar cámara en el mando",
+	"Settings_Camera_ShowOnController_Desc": "Activa una ventana de cámara conectada a tu mando cuando el menú principal está abierto.",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "Mostrar cámara en los límites de la habitación",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "Activar vista de habitación",
+	"Settings_Camera_AllowCameraForRoomView": "Vista de habitación",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Accede a la vista de la habitación en cualquier momento haciendo doble clic en el botón \"Sistema\"",
 	"Settings_Camera_Compatibility": "Velocidad de la cámara",
 	"Settings_Camera_Rate_Hz": "Velocidad de la cámara (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "Si experimentas perdidas de seguimiento puede que te interese reducir la velocidad de la cámara, desactivarla o probar con otro puerto USB.",
+	"Settings_Camera_RoomViewStyle": "Estilo de vista de habitación",
+	"Settings_Camera_RoomViewStyle_EdgeA": "Bordes coloreados",
+	"Settings_Camera_RoomViewStyle_EdgeB": "Fantasmas coloreados",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "Paso translúcido",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "Paso opaco",
+	"Settings_Camera_RoomView3D_Experimental": "La vista de la habitación en 3D es experimental.",
+	"Settings_Camera_RoomView3D_Unsupported": "La vista de habitación en 3D no es compatible con este visor.",
+	"Settings_CameraTest": "Probar cámara y rendimiento",
+	"Settings_StartCameraTest": "Iniciar prueba",
+	"CameraTest_CheckingCamera": "Comprobando la cámara...",
+	"CameraTest_CheckingTracking": "Comprobando el seguimiento con la cámara...",
+	"CameraTest_CameraFailed": "Ha fallado la comunicación con la cámara",
+	"CameraTest_TrackingFailed": "Ha fallado el seguimiento con la cámara activada",
+	"CameraTest_Success": "Prueba de cámara completada con éxito",
+	"CameraTest": "Test de la cámara",
+	"CameraTestStatus_Evaluating": "Comprobando",
+	"CameraTestStatus_Success": "Completado",
+	"CameraTestStatus_Failure": "Fallo",
 	"Advanced_Appearance": "Apariencia",
 	"Settings_Appearance_Background": "Fondo",
 	"Settings_Appearance_Background_NoSteam": "Iniciar Steam para ver cualquier fondo adicional.",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "Desactivado",
 	"Settings_ToggleButton_Disable": "Desactivar",
 	"Settings_ToggleButton_Enable": "Activar",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "Ajustes de SteamVR",
-	"Settings_CameraTest": "Probar cámara y rendimiento",
-	"Settings_StartCameraTest": "Iniciar prueba",
-	"CameraTest_CheckingCamera": "Comprobando la cámara...",
-	"CameraTest_CheckingTracking": "Comprobando el seguimiento con la cámara...",
-	"CameraTest_CameraFailed": "Ha fallado la comunicación con la cámara",
-	"CameraTest_TrackingFailed": "Ha fallado el seguimiento con la cámara activada",
-	"CameraTest_Success": "Prueba de cámara completada con éxito",
-	"CameraTest": "Test de la cámara",
-	"CameraTestStatus_Evaluating": "Comprobando",
-	"CameraTestStatus_Success": "Completado",
-	"CameraTestStatus_Failure": "Fallo",
-	"Settings_CameraChaperone_RoomViewMode": "Modo de cámara de vista de habitación",
-	"CameraRoomViewMode_EdgeA": "Bordes coloreados",
-	"CameraRoomViewMode_EdgeB": "Fantasmas coloreados",
-	"CameraRoomViewMode_VideoTranslucent": "Paso translúcido",
-	"CameraRoomViewMode_VideoOpaque": "Paso opaco",
 	"Settings_MustRestart_Description": "SteamVR debe reiniciarse para que algunos cambios surtan efecto.",
 	"Settings_MustRestart_RestartSteamVR_Button": "Reiniciar SteamVR",
 	"Settings_MustQuitApp_Description": "Para que los cambios surtan efecto, por favor, sal de juego.",
