--- a/resources/webinterface/dashboard/localization/vrmonitor_tchinese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_tchinese.json
@@ -179,15 +179,33 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "勾選此項將允許針對此應用程式設定不同於全域設定的更新率。",
 	"Settings_MimeTypes_Pancake_Header": "選擇用以啟動 2D 應用程式的應用程式",
 	"Settings_Camera_EnableCamera": "啟用鏡頭",
-	"Settings_Camera_AllowCameraInDashboard": "顯示控制器鏡頭",
-	"Settings_Camera_AllowCameraInDashboard_Desc": "主控台開啟時，顯示位於控制器上方的鏡頭視窗。",
+	"Settings_Camera_ShowOnController": "顯示控制器鏡頭",
+	"Settings_Camera_ShowOnController_Desc": "主控台開啟時，顯示位於控制器上方的鏡頭視窗。",
 	"Settings_Camera_AllowCameraForChaperoneBounds": "顯示房間角落鏡頭",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "啟用房間視角",
+	"Settings_Camera_AllowCameraForRoomView": "房間視角",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "按兩下「系統鍵」即可隨時進入房間視角",
 	"Settings_Camera_Compatibility": "鏡頭頻率",
 	"Settings_Camera_Rate_Hz": "鏡頭頻率（Hz）",
 	"Settings_Camera_CompatibilityExplanation": "若在使用時失去定位，您可能需將鏡頭頻率調低、禁用鏡頭，或換到其他的 USB 連接埠。",
+	"Settings_Camera_RoomViewStyle": "房間視角風格",
+	"Settings_Camera_RoomViewStyle_EdgeA": "彩色邊緣",
+	"Settings_Camera_RoomViewStyle_EdgeB": "彩色重影",
+	"Settings_Camera_RoomViewStyle_VideoTranslucent": "半透明穿透",
+	"Settings_Camera_RoomViewStyle_VideoOpaque": "不透明穿透",
+	"Settings_Camera_RoomView3D_Experimental": "3D 房間視角尚在實驗階段。",
+	"Settings_Camera_RoomView3D_Unsupported": "此頭戴顯示器不支援 3D 房間視角。",
+	"Settings_CameraTest": "測試鏡頭與效能",
+	"Settings_StartCameraTest": "開始測試",
+	"CameraTest_CheckingCamera": "正在檢查鏡頭…",
+	"CameraTest_CheckingTracking": "正在檢查鏡頭定位…",
+	"CameraTest_CameraFailed": "鏡頭通訊失敗",
+	"CameraTest_TrackingFailed": "鏡頭啟用時定位失敗",
+	"CameraTest_Success": "通過鏡頭測試",
+	"CameraTest": "鏡頭測試",
+	"CameraTestStatus_Evaluating": "檢查中",
+	"CameraTestStatus_Success": "成功",
+	"CameraTestStatus_Failure": "失敗",
 	"Advanced_Appearance": "外觀",
 	"Settings_Appearance_Background": "背景",
 	"Settings_Appearance_Background_NoSteam": "啟動 Steam 以檢視額外背景。",
@@ -270,23 +288,9 @@
 	"Settings_ToggleButton_Off": "關閉",
 	"Settings_ToggleButton_Disable": "停用",
 	"Settings_ToggleButton_Enable": "啟用",
+	"Settings_2D": "2D",
+	"Settings_3D": "3D",
 	"Settings_Header_SteamVR": "SteamVR 設定",
-	"Settings_CameraTest": "測試鏡頭與效能",
-	"Settings_StartCameraTest": "開始測試",
-	"CameraTest_CheckingCamera": "正在檢查鏡頭…",
-	"CameraTest_CheckingTracking": "正在檢查鏡頭定位…",
-	"CameraTest_CameraFailed": "鏡頭通訊失敗",
-	"CameraTest_TrackingFailed": "鏡頭啟用時定位失敗",
-	"CameraTest_Success": "通過鏡頭測試",
-	"CameraTest": "鏡頭測試",
-	"CameraTestStatus_Evaluating": "檢查中",
-	"CameraTestStatus_Success": "成功",
-	"CameraTestStatus_Failure": "失敗",
-	"Settings_CameraChaperone_RoomViewMode": "房間視角鏡頭模式",
-	"CameraRoomViewMode_EdgeA": "彩色邊緣",
-	"CameraRoomViewMode_EdgeB": "彩色重影",
-	"CameraRoomViewMode_VideoTranslucent": "半透明穿透",
-	"CameraRoomViewMode_VideoOpaque": "不透明穿透",
 	"Settings_MustRestart_Description": "SteamVR 需要重新啟動，部分設定變更才會生效。",
 	"Settings_MustRestart_RestartSteamVR_Button": "重新啟動 SteamVR ",
 	"Settings_MustQuitApp_Description": "請離開目前的遊戲，設定變更才會生效。",
