--- a/resources/webinterface/dashboard/localization/webhelper_bulgarian.json
+++ b/resources/webinterface/dashboard/localization/webhelper_bulgarian.json
@@ -1,5 +1,5 @@
 {
-	"language": "български",
+	"language": "bulgarian",
 	"none": "Няма",
 	"MetersPerSecond_Abbreviation": "м/с",
 	"Button_OK": "Добре",
@@ -15,6 +15,8 @@
 	"Button_Retry": "Повторен опит",
 	"Settings": "Настройки",
 	"PowerMenuResetSeatedPosition": "Нулиране на седналото положение",
+	"PowerMenuResetStandingPosition": "Нулиране на правостоящото положение",
+	"Resetting_Countdown": "Нулиране…",
 	"PowerMenuTurnOffController": "Изключване на контролер",
 	"PowerMenuQuitSceneApp": "Изход от %1$s",
 	"PowerMenuQuitSceneApp_NoApp": "Изход от приложението",
@@ -68,6 +70,5 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "Готово",
-	"Resetting_Seated_Origin": "Нулиране на произхода за седналото положение",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
