--- a/resources/webinterface/dashboard/localization/webhelper_czech.json
+++ b/resources/webinterface/dashboard/localization/webhelper_czech.json
@@ -15,6 +15,8 @@
 	"Button_Retry": "Opakovat",
 	"Settings": "Nastavení",
 	"PowerMenuResetSeatedPosition": "Resetovat pozici vsedě",
+	"PowerMenuResetStandingPosition": "Resetovat pozici vestoje",
+	"Resetting_Countdown": "Resetování...",
 	"PowerMenuTurnOffController": "Vypnout ovladač",
 	"PowerMenuQuitSceneApp": "Ukončit %1$s",
 	"PowerMenuQuitSceneApp_NoApp": "Ukončit aplikaci",
@@ -68,6 +70,5 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "Hotovo",
-	"Resetting_Seated_Origin": "Resetování pozice vsedě",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
