--- a/resources/webinterface/dashboard/localization/webhelper_danish.json
+++ b/resources/webinterface/dashboard/localization/webhelper_danish.json
@@ -15,6 +15,8 @@
 	"Button_Retry": "Prøv igen",
 	"Settings": "Indstillinger",
 	"PowerMenuResetSeatedPosition": "Nulstil siddende position",
+	"PowerMenuResetStandingPosition": "Nulstil stående position",
+	"Resetting_Countdown": "Nulstiller...",
 	"PowerMenuTurnOffController": "Sluk controller",
 	"PowerMenuQuitSceneApp": "Afslut %1$s",
 	"PowerMenuQuitSceneApp_NoApp": "Afslut app",
@@ -68,6 +70,5 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "Færdig",
-	"Resetting_Seated_Origin": "Nulstiller oprindelig siddende position",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
