--- a/resources/webinterface/dashboard/localization/webhelper_greek.json
+++ b/resources/webinterface/dashboard/localization/webhelper_greek.json
@@ -15,6 +15,8 @@
 	"Button_Retry": "Επανάληψη",
 	"Settings": "Ρυθμίσεις",
 	"PowerMenuResetSeatedPosition": "Επαναφορά θέσης καθίσματος",
+	"PowerMenuResetStandingPosition": "Επαναφορά όρθιας θέσης",
+	"Resetting_Countdown": "Επαναφορά...",
 	"PowerMenuTurnOffController": "Απενεργοποίηση χειριστηρίου",
 	"PowerMenuQuitSceneApp": "Έξοδος από %1$s",
 	"PowerMenuQuitSceneApp_NoApp": "Έξοδος",
@@ -68,6 +70,5 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "Ολοκληρώθηκε",
-	"Resetting_Seated_Origin": "Επαναφορά θέσης ανάπαυσης",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
