--- a/resources/webinterface/dashboard/localization/webhelper_hungarian.json
+++ b/resources/webinterface/dashboard/localization/webhelper_hungarian.json
@@ -15,6 +15,8 @@
 	"Button_Retry": "Újra",
 	"Settings": "Beállítások",
 	"PowerMenuResetSeatedPosition": "Ülő pozíció visszaállítása",
+	"PowerMenuResetStandingPosition": "Álló pozíció visszaállítása",
+	"Resetting_Countdown": "Visszaállítás...",
 	"PowerMenuTurnOffController": "Játékvezérlő kikapcsolása",
 	"PowerMenuQuitSceneApp": "%1$s bezárása",
 	"PowerMenuQuitSceneApp_NoApp": "Kilépés az alkalmazásból",
@@ -68,6 +70,5 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "Kész",
-	"Resetting_Seated_Origin": "Ülőhelyzeti kiindulópont alaphelyzetbe állítása",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
