--- a/resources/webinterface/dashboard/localization/webhelper_japanese.json
+++ b/resources/webinterface/dashboard/localization/webhelper_japanese.json
@@ -15,6 +15,8 @@
 	"Button_Retry": "再試行",
 	"Settings": "設定",
 	"PowerMenuResetSeatedPosition": "着席位置のリセット",
+	"PowerMenuResetStandingPosition": "Reset Standing Position",
+	"Resetting_Countdown": "Resetting...",
 	"PowerMenuTurnOffController": "コントローラの電源を切る",
 	"PowerMenuQuitSceneApp": "%1$sを終了",
 	"PowerMenuQuitSceneApp_NoApp": "アプリを終了",
@@ -68,6 +70,5 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "OK",
-	"Resetting_Seated_Origin": "着席原点のリセット",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
