--- a/resources/webinterface/dashboard/localization/webhelper_korean.json
+++ b/resources/webinterface/dashboard/localization/webhelper_korean.json
@@ -15,6 +15,8 @@
 	"Button_Retry": "재시도",
 	"Settings": "설정",
 	"PowerMenuResetSeatedPosition": "앉은 자세 설정 초기화",
+	"PowerMenuResetStandingPosition": "서 있는 자세 설정 초기화",
+	"Resetting_Countdown": "초기화 중...",
 	"PowerMenuTurnOffController": "컨트롤러 끄기",
 	"PowerMenuQuitSceneApp": "%1$s 끝내기",
 	"PowerMenuQuitSceneApp_NoApp": "앱 종료하기",
@@ -68,6 +70,5 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "완료",
-	"Resetting_Seated_Origin": "고정 원점 재설정",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
