--- a/resources/webinterface/dashboard/localization/webhelper_portuguese.json
+++ b/resources/webinterface/dashboard/localization/webhelper_portuguese.json
@@ -14,7 +14,9 @@
 	"Button_Next": "Seguinte",
 	"Button_Retry": "Tentar de novo",
 	"Settings": "Definições",
-	"PowerMenuResetSeatedPosition": "Restaurar posição sentada",
+	"PowerMenuResetSeatedPosition": "Repor posição sentada",
+	"PowerMenuResetStandingPosition": "Repor posição de pé",
+	"Resetting_Countdown": "A repor...",
 	"PowerMenuTurnOffController": "Desligar comando",
 	"PowerMenuQuitSceneApp": "Sair de %1$s",
 	"PowerMenuQuitSceneApp_NoApp": "Sair da aplicação",
@@ -68,6 +70,5 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "OK",
-	"Resetting_Seated_Origin": "A restaurar posição sentada original",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
