--- a/resources/webinterface/dashboard/localization/webhelper_russian.json
+++ b/resources/webinterface/dashboard/localization/webhelper_russian.json
@@ -15,6 +15,8 @@
 	"Button_Retry": "Попытайтесь снова",
 	"Settings": "Настройки",
 	"PowerMenuResetSeatedPosition": "Сбросить положение сидя",
+	"PowerMenuResetStandingPosition": "Сбросить положение стоя",
+	"Resetting_Countdown": "Сброс...",
 	"PowerMenuTurnOffController": "Выключить контроллер",
 	"PowerMenuQuitSceneApp": "Выйти из %1$s",
 	"PowerMenuQuitSceneApp_NoApp": "Выйти из приложения",
@@ -68,6 +70,5 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "Готово",
-	"Resetting_Seated_Origin": "Сброс положения сидя",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
