--- a/resources/webinterface/dashboard/localization/webhelper_schinese.json
+++ b/resources/webinterface/dashboard/localization/webhelper_schinese.json
@@ -15,6 +15,8 @@
 	"Button_Retry": "重试",
 	"Settings": "设置",
 	"PowerMenuResetSeatedPosition": "重置就座状态",
+	"PowerMenuResetStandingPosition": "重置站立状态",
+	"Resetting_Countdown": "正在重置…",
 	"PowerMenuTurnOffController": "关闭控制器",
 	"PowerMenuQuitSceneApp": "退出 %1$s",
 	"PowerMenuQuitSceneApp_NoApp": "退出应用",
@@ -68,6 +70,5 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "确定",
-	"Resetting_Seated_Origin": "正在重置就座原点",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
