--- a/resources/webinterface/dashboard/localization/webhelper_thai.json
+++ b/resources/webinterface/dashboard/localization/webhelper_thai.json
@@ -15,6 +15,8 @@
 	"Button_Retry": "ลองใหม่",
 	"Settings": "การตั้งค่า",
 	"PowerMenuResetSeatedPosition": "รีเซ็ตตำแหน่งการนั่ง",
+	"PowerMenuResetStandingPosition": "รีเซ็ตตำแหน่งการยืน",
+	"Resetting_Countdown": "กำลังรีเซ็ต...",
 	"PowerMenuTurnOffController": "ปิดคอนโทรลเลอร์",
 	"PowerMenuQuitSceneApp": "ออกจาก %1$s",
 	"PowerMenuQuitSceneApp_NoApp": "ออกจากแอป",
@@ -68,6 +70,5 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "เสร็จสมบูรณ์",
-	"Resetting_Seated_Origin": "รีเซ็ตการนั่งดั้งเดิม",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
