--- a/resources/webinterface/dashboard/localization/webhelper_turkish.json
+++ b/resources/webinterface/dashboard/localization/webhelper_turkish.json
@@ -15,6 +15,8 @@
 	"Button_Retry": "Yeniden Dene",
 	"Settings": "Ayarlar",
 	"PowerMenuResetSeatedPosition": "Oturma Pozisyonunu Sıfırla",
+	"PowerMenuResetStandingPosition": "Reset Standing Position",
+	"Resetting_Countdown": "Resetting...",
 	"PowerMenuTurnOffController": "Kontrolcüyü Kapat",
 	"PowerMenuQuitSceneApp": "Çıkış: %1$s",
 	"PowerMenuQuitSceneApp_NoApp": "Uygulamadan Çık",
@@ -68,6 +70,5 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "Tamam",
-	"Resetting_Seated_Origin": "Resetting Seated Origin",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
