--- a/resources/webinterface/dashboard/localization/webhelper_ukrainian.json
+++ b/resources/webinterface/dashboard/localization/webhelper_ukrainian.json
@@ -15,6 +15,8 @@
 	"Button_Retry": "Повторити",
 	"Settings": "Налаштування",
 	"PowerMenuResetSeatedPosition": "Скинути місце сидіння",
+	"PowerMenuResetStandingPosition": "Скинути місце стояння",
+	"Resetting_Countdown": "Скидання…",
 	"PowerMenuTurnOffController": "Вимкнути контролер",
 	"PowerMenuQuitSceneApp": "Закрити %1$s",
 	"PowerMenuQuitSceneApp_NoApp": "Вийти із застосунку",
@@ -68,6 +70,5 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "Готово",
-	"Resetting_Seated_Origin": "Скидання місця сидіння",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
