--- a/resources/webinterface/dashboard/localization/webhelper_vietnamese.json
+++ b/resources/webinterface/dashboard/localization/webhelper_vietnamese.json
@@ -15,6 +15,8 @@
 	"Button_Retry": "Thử lại",
 	"Settings": "Thiết lập",
 	"PowerMenuResetSeatedPosition": "Đặt lại tư thế ngồi",
+	"PowerMenuResetStandingPosition": "Đặt lại tư thế đứng",
+	"Resetting_Countdown": "Đang đặt lại...",
 	"PowerMenuTurnOffController": "Tắt bộ điều khiển",
 	"PowerMenuQuitSceneApp": "Thoát %1$s",
 	"PowerMenuQuitSceneApp_NoApp": "Thoát ứng dụng",
@@ -68,6 +70,5 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "Xong",
-	"Resetting_Seated_Origin": "Cài đặt lại chỗ ngồi gốc",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
